@@ -86,6 +86,11 @@ import org.apache.logging.log4j.Level;
 public class FireControl {
     private final static MMLogger LOGGER = MMLogger.create(FireControl.class);
 
+    // A unit whose best firing plan does less than this much expected damage will spot for indirect fire instead of
+    // taking the near-worthless shot (when it has a target in line of sight). Package-visible so Princess applies the
+    // same threshold when choosing spotting over firing. Tunable; full payoff-based selection is tracked as P009.
+    static final double MIN_USEFUL_FIRING_DAMAGE = 1.0;
+
     protected static final double DAMAGE_UTILITY = 1.0;
     protected static final double CRITICAL_UTILITY = 10.0;
     protected static final double KILL_UTILITY = 50.0;
@@ -423,12 +428,12 @@ public class FireControl {
 
         final boolean isShooterInfantry = (shooter instanceof Infantry);
         if (!isShooterInfantry) {
-            if (target instanceof BattleArmor) {
-                toHitData.addModifier(TH_TAR_BA);
-            } else if (target instanceof EjectedCrew) {
-                toHitData.addModifier(TH_TAR_MW);
-            } else if (target instanceof Infantry) {
-                toHitData.addModifier(TH_TAR_INF);
+            switch (target) {
+                case BattleArmor ignored -> toHitData.addModifier(TH_TAR_BA);
+                case EjectedCrew ignored -> toHitData.addModifier(TH_TAR_MW);
+                case Infantry ignored -> toHitData.addModifier(TH_TAR_INF);
+                default -> {
+                }
             }
         }
 
@@ -689,10 +694,14 @@ public class FireControl {
     }
 
     /**
-     * Returns the value of {@link Compute#getInfantryRangeMods(int, InfantryWeapon, InfantryWeapon, boolean)}.
+     * Returns the value of
+     * {@link Compute#getInfantryRangeMods(int, InfantryWeapon, InfantryWeapon, InfantryWeapon, boolean)}.
      *
-     * @param distance The distance to the target.
-     * @param weapon   The {@link InfantryWeapon} being fired.
+     * @param distance   The distance to the target.
+     * @param weapon     The {@link InfantryWeapon} being fired.
+     * @param secondary  The platoon's secondary {@link InfantryWeapon}, or null.
+     * @param disposable The platoon's Disposable Weapon (TO:AuE p.116, Corrected Sixth Printing), or null.
+     * @param underwater Whether the attack is made underwater.
      *
      * @return The to hit modifiers as a {@link ToHitData} object.
      */
@@ -700,8 +709,9 @@ public class FireControl {
     private ToHitData getInfantryRangeMods(final int distance,
           final InfantryWeapon weapon,
           final InfantryWeapon secondary,
+          final InfantryWeapon disposable,
           final boolean underwater) {
-        return Compute.getInfantryRangeMods(distance, weapon, secondary, underwater);
+        return Compute.getInfantryRangeMods(distance, weapon, secondary, disposable, underwater);
     }
 
     /**
@@ -804,7 +814,7 @@ public class FireControl {
         }
         // Bays compute arc differently
         final boolean inArc = (bayWeapon)
-              ? ComputeArc.isInArc(game, shooter.getId(), weapon.getBayWeapons().get(0).getEquipmentNum(), target)
+              ? ComputeArc.isInArc(game, shooter.getId(), weapon.getBayWeapons().getFirst().getEquipmentNum(), target)
               : isInArc(shooterState.getPosition(), shooterFacing, targetState.getPosition(),
               shooter.getWeaponArc(shooter.getEquipmentNum(weapon)));
         if (!inArc) {
@@ -929,7 +939,8 @@ public class FireControl {
             }
         } else {
             toHit.append(getInfantryRangeMods(distance, (InfantryWeapon) weapon.getType(),
-                  isShooterInfantry ? ((Infantry) shooter).getSecondaryWeapon() : null,
+                  shooter instanceof ConvInfantry infantry ? infantry.getSecondaryWeapon() : null,
+                  shooter instanceof ConvInfantry infantry ? infantry.getDisposableWeapon() : null,
                   ILocationExposureStatus.WET == shooter.getLocationStatus(weapon.getLocation())));
         }
 
@@ -1219,9 +1230,10 @@ public class FireControl {
           final AmmoMounted ammo,
           final Game game) {
 
-        // This really should only be done for debugging purposes. Regular play should
-        // avoid the overhead.
-        if (LOGGER.isLevelMoreSpecificThan(Level.INFO)) {
+        // Debugging only: cross-checks the guess with a real to-hit calculation, which is expensive
+        // (especially with C3 networks). Gated behind TRACE so ordinary DEBUG bot logging does not
+        // trigger it in regular play.
+        if (LOGGER.isLevelMoreSpecificThan(Level.DEBUG)) {
             return null;
         }
 
@@ -1259,9 +1271,9 @@ public class FireControl {
      */
     private @Nullable String checkGuessPhysical(final Entity shooter, final Targetable target,
           final PhysicalAttackType attackType, final Game game) {
-        // This really should only be done for debugging purposes. Regular play should
-        // avoid the overhead.
-        if (LOGGER.isLevelMoreSpecificThan(Level.INFO)) {
+        // Debugging only: cross-checks the guess with a real to-hit calculation. Gated behind TRACE
+        // so ordinary DEBUG bot logging does not trigger it in regular play.
+        if (LOGGER.isLevelMoreSpecificThan(Level.DEBUG)) {
             return null;
         }
 
@@ -1299,9 +1311,11 @@ public class FireControl {
      */
     @Nullable
     String checkAllGuesses(final Entity shooter, final Game game) {
-        // This really should only be done for debugging purposes. Regular play should
-        // avoid the overhead.
-        if (LOGGER.isLevelMoreSpecificThan(Level.INFO)) {
+        // Debugging only: this sweep computes a real to-hit for every enemy x weapon x ammo combination,
+        // which is extremely expensive (especially with C3 networks, where each real to-hit triggers
+        // spotter searches and ECM scans). The shipped log configuration runs the bot loggers at DEBUG,
+        // so gate this behind TRACE to keep it out of regular play. See issue #8442.
+        if (LOGGER.isLevelMoreSpecificThan(Level.DEBUG)) {
             return null;
         }
 
@@ -1459,7 +1473,7 @@ public class FireControl {
      * @return Multiplier to apply to utility (1.0 = no change, > 1.0 = preferred target)
      */
     protected double calcRolePreferredTargetMultiplier(final Entity shooter, final Targetable target) {
-        if (!owner.getBehaviorSettings().isUseCasparProtocol()) {
+        if (!owner.usesCasparProtocol()) {
             return 1.0;
         }
 
@@ -2048,12 +2062,13 @@ public class FireControl {
         // 1. Target is flying Aerospace unit
         // 2. Target is VTOL not above blast-causing terrain
         // 3. Target is Submarine too far below surface level
+        // 4. Target is hidden
         if (target.getTargetType() == Targetable.TYPE_ENTITY) {
             Entity entity = (Entity) target;
             Hex hex = game.getHexOf(entity);
             hexToBomb.setTargetLevel((hex != null) ? hex.getLevel() : 0);
 
-            if (entity.isAirborne()) {
+            if (entity.isAirborne() || entity.isHidden()) {
                 return diveBombPlan;
             }
             if (entity.isAirborneVTOLorWIGE()) {
@@ -2088,7 +2103,7 @@ public class FireControl {
         if (groundBombs.isEmpty()) {
             return diveBombPlan;
         } else {
-            exampleBomb = groundBombs.get(0);
+            exampleBomb = groundBombs.getFirst();
         }
 
         while (weaponIter.hasNext()) {
@@ -2334,7 +2349,7 @@ public class FireControl {
                     // target is likely to explode and ammo explosion splash damage is on, etc).
                     continue;
                 } else if (!(shooter instanceof BattleArmor)
-                      && (Infantry.LOC_FIELD_GUNS == weaponFireInfo.getWeapon().getLocation())) {
+                      && (ConvInfantry.LOC_FIELD_GUNS == weaponFireInfo.getWeapon().getLocation())) {
                     fieldGuns.add(weaponFireInfo);
                     continue;
                 }
@@ -2541,6 +2556,95 @@ public class FireControl {
      *
      * @return the 'best' firing plan - uses heat as disutility and includes the possibility of twisting
      */
+    /**
+     * @param shooter the unit to check
+     *
+     * @return {@code true} if the shooter has at least one weapon in a Directional Torso Mount whose arc can still be
+     *       changed (BMM p.83), so it is worth orienting mounts during fire planning
+     */
+    private boolean usesDirectionalTorsoMounts(Entity shooter) {
+        for (final WeaponMounted weapon : shooter.getWeaponList()) {
+            if (isPlannableDirectionalMount(weapon)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    /**
+     * @param weapon the weapon to test
+     *
+     * @return {@code true} if the weapon is a 2-point Directional Torso Mount whose arc Princess can plan (front or
+     *       rear). The 3-point 360-degree quad turret is deliberately excluded: Princess only plans the front/rear flip
+     *       and cannot represent that mount's 0-5 facing offset, so it must not be mutated by the fire planner (doing
+     *       so would snap it to front/rear).
+     */
+    private static boolean isPlannableDirectionalMount(WeaponMounted weapon) {
+        return weapon.hasDirectionalTorsoMount()
+              && !weapon.hasDirectional360TorsoMount()
+              && !weapon.isDirectionalMountLocked();
+    }
+
+    /**
+     * @param shooter the unit whose mount facings to capture
+     *
+     * @return a map of equipment number to the current rear/front flag for every changeable Directional Torso Mount
+     *       weapon, so it can be restored after the (mutating) fire-planning search
+     */
+    private Map<Integer, Boolean> saveDirectionalMountFacings(Entity shooter) {
+        final Map<Integer, Boolean> saved = new HashMap<>();
+        for (final WeaponMounted weapon : shooter.getWeaponList()) {
+            if (isPlannableDirectionalMount(weapon)) {
+                saved.put(shooter.getEquipmentNum(weapon), weapon.isDirectionalMountRear());
+            }
+        }
+        return saved;
+    }
+
+    private void restoreDirectionalMountFacings(Entity shooter, Map<Integer, Boolean> savedFacings) {
+        for (final Map.Entry<Integer, Boolean> entry : savedFacings.entrySet()) {
+            shooter.getEquipment(entry.getKey()).setDirectionalMountRear(entry.getValue());
+        }
+    }
+
+    /**
+     * Points each changeable Directional Torso Mount weapon (BMM p.83) toward the target for the shooter's current
+     * facing - front if the target is in the front arc, otherwise rear if it is in the rear arc - mutating the mounts
+     * in place so the subsequent to-hit evaluation sees the right arc.
+     *
+     * @param shooter         the firing unit
+     * @param target          the target the plan is being built against
+     * @param originalFacings the mount facings before planning, to detect which mounts actually flip
+     *
+     * @return a map of equipment number to chosen rear/front flag for only the mounts whose facing differs from the
+     *       original (i.e. the arc changes this plan must declare to the server)
+     */
+    private Map<Integer, Boolean> orientDirectionalMountsAtTarget(Entity shooter, Targetable target,
+          Map<Integer, Boolean> originalFacings) {
+        final Map<Integer, Boolean> flips = new HashMap<>();
+        final Coords shooterPosition = shooter.getPosition();
+        final Coords targetPosition = (target == null) ? null : target.getPosition();
+        if ((shooterPosition == null) || (targetPosition == null)) {
+            return flips;
+        }
+        for (final WeaponMounted weapon : shooter.getWeaponList()) {
+            if (!isPlannableDirectionalMount(weapon)) {
+                continue;
+            }
+            final int weaponNumber = shooter.getEquipmentNum(weapon);
+            final int facing = shooter.isSecondaryArcWeapon(weaponNumber)
+                  ? shooter.getSecondaryFacing() : shooter.getFacing();
+            final boolean inFront = isInArc(shooterPosition, facing, targetPosition, Compute.ARC_FORWARD);
+            final boolean rear = !inFront
+                  && isInArc(shooterPosition, facing, targetPosition, Compute.ARC_REAR);
+            weapon.setDirectionalMountRear(rear);
+            if (originalFacings.containsKey(weaponNumber) && (originalFacings.get(weaponNumber) != rear)) {
+                flips.put(weaponNumber, rear);
+            }
+        }
+        return flips;
+    }
+
     FiringPlan determineBestFiringPlan(final FiringPlanCalculationParameters params) {
         // unpack parameters for easier reference
         final Entity shooter = params.getShooter();
@@ -2550,7 +2654,17 @@ public class FireControl {
         final int maxHeat = params.getMaxHeat();
         final Map<WeaponMounted, Double> ammoConservation = params.getAmmoConservation();
 
+        // Directional Torso Mounts (BMM p.83) are oriented toward the target during real fire planning
+        // (the GET path); the mount flags are mutated in place and restored when planning finishes.
+        final boolean orientMounts = (params.getCalculationType()
+              == FiringPlanCalculationParameters.FiringPlanCalculationType.GET)
+              && usesDirectionalTorsoMounts(shooter);
+        final Map<Integer, Boolean> originalMountFacings =
+              orientMounts ? saveDirectionalMountFacings(shooter) : Map.of();
+
         // Get the best plan without any twists.
+        Map<Integer, Boolean> noTwistMountFlips =
+              orientMounts ? orientDirectionalMountsAtTarget(shooter, target, originalMountFacings) : Map.of();
         FiringPlan noTwistPlan = switch (params.getCalculationType()) {
             case GET -> getBestFiringPlan(shooter, target, owner.getGame(), ammoConservation);
             case GUESS -> guessBestFiringPlanUnderHeat(shooter,
@@ -2560,9 +2674,13 @@ public class FireControl {
                   maxHeat,
                   owner.getGame());
         };
+        noTwistPlan.setDirectionalMountFacings(noTwistMountFlips);
 
         // If we can't change facing, we're done.
         if (!params.getShooter().canChangeSecondaryFacing()) {
+            if (orientMounts) {
+                restoreDirectionalMountFacings(shooter, originalMountFacings);
+            }
             return noTwistPlan;
         }
 
@@ -2579,6 +2697,8 @@ public class FireControl {
         for (final int currentTwist : validFacingChanges) {
             shooter.setSecondaryFacing(correctFacing(originalFacing + currentTwist), false);
 
+            Map<Integer, Boolean> twistMountFlips = orientMounts
+                  ? orientDirectionalMountsAtTarget(shooter, target, originalMountFacings) : Map.of();
             FiringPlan twistPlan = switch (params.getCalculationType()) {
                 case GET -> getBestFiringPlan(shooter, target, owner.getGame(), ammoConservation);
                 case GUESS -> guessBestFiringPlanUnderHeat(shooter,
@@ -2589,6 +2709,7 @@ public class FireControl {
                       owner.getGame());
             };
             twistPlan.setTwist(currentTwist);
+            twistPlan.setDirectionalMountFacings(twistMountFlips);
 
             if (twistPlan.getUtility() > bestFiringPlan.getUtility()) {
                 bestFiringPlan = twistPlan;
@@ -2597,6 +2718,9 @@ public class FireControl {
 
         // Back to where we started.
         shooter.setSecondaryFacing(originalFacing, false);
+        if (orientMounts) {
+            restoreDirectionalMountFacings(shooter, originalMountFacings);
+        }
 
         return bestFiringPlan;
     }
@@ -2645,9 +2769,26 @@ public class FireControl {
         // legally can't spot
         // am firing and don't have a command console to mitigate the spotting penalty
         // otherwise, attempt to spot the closest enemy
-        if (spotter.isSpotting() || !spotter.canSpot() || spotter.isNarcedBy(INarcPod.HAYWIRE) ||
-              (plan != null) && (plan.getExpectedDamage() > 0) &&
-                    !spotter.getCrew().hasActiveCommandConsole()) {
+        // Split the disqualifiers so each failure logs its own reason - a playtest can grep princess.log for
+        // [Spot] to see exactly why a unit did or did not spot.
+        if (spotter.isSpotting()) {
+            LOGGER.debug("[Spot] {}: not spotting - already spotting this round", spotter.getDisplayName());
+            return null;
+        }
+        if (!spotter.canSpot()) {
+            LOGGER.debug("[Spot] {}: not spotting - unit cannot spot (sprinted, off-board, evading or inactive)",
+                  spotter.getDisplayName());
+            return null;
+        }
+        if (spotter.isNarcedBy(INarcPod.HAYWIRE)) {
+            LOGGER.debug("[Spot] {}: not spotting - jammed by a HAYWIRE iNarc pod", spotter.getDisplayName());
+            return null;
+        }
+        boolean firingForUsefulDamage = (plan != null) && (plan.getExpectedDamage() >= MIN_USEFUL_FIRING_DAMAGE);
+        if (firingForUsefulDamage && !spotter.getCrew().hasActiveCommandConsole()) {
+            LOGGER.debug("[Spot] {}: not spotting - firing for {} damage (>= {}) with no command console to offset "
+                        + "the spotting penalty", spotter.getDisplayName(), plan.getExpectedDamage(),
+                  MIN_USEFUL_FIRING_DAMAGE);
             return null;
         }
 
@@ -2689,9 +2830,12 @@ public class FireControl {
         // otherwise, we still can't spot
         if (!closestTargets.isEmpty()) {
             Targetable target = closestTargets.get(Compute.randomInt(closestTargets.size()));
+            LOGGER.debug("[Spot] {}: spotting {} at {} hexes for indirect fire", spotter.getDisplayName(),
+                  target.getDisplayName(), spotter.getPosition().distance(target.getPosition()));
             return new SpotAction(spotter.getId(), target.getId());
         }
 
+        LOGGER.debug("[Spot] {}: not spotting - no enemy in line of sight", spotter.getDisplayName());
         return null;
     }
 
@@ -3095,7 +3239,7 @@ public class FireControl {
 
             // AMS only uses 1 type of ammo.
             if (weaponType.hasFlag(WeaponType.F_AMS)) {
-                return validAmmo.get(0);
+                return validAmmo.getFirst();
             }
 
             // Target is a building.
@@ -3162,6 +3306,13 @@ public class FireControl {
                         return preferredAmmo;
                     }
                 }
+                // TODO: switch to a Magnetic Pulse / Improved Magnetic Pulse round (Munitions.
+                //  M_MAGNETIC_PULSE / M_IATM_IMP) against high-value or hard-to-hit targets to debuff
+                //  them (+1 to-hit, heat, and for IMP movement + hostile ECM). Add a getMagneticPulseAmmo
+                //  helper mirroring getHeatAmmo, and gate it on the target being worth debuffing (e.g.
+                //  accurate, high-firepower, a C3 spotter, or a fast flanker). This pairs with the
+                //  scoring TODO in WeaponFireInfo.computeExpectedDamage - both are needed for Princess
+                //  to actually field and fire these munitions.
                 // Everything else.
                 msg.append("\n\tTarget is a hard target... ");
                 preferredAmmo = getHardTargetAmmo(validAmmo, weaponType, range);
@@ -3180,7 +3331,7 @@ public class FireControl {
             } else {
                 msg.append("\n\tLoading first available ammo.");
                 // Don't set switched reason if we didn't set it already.
-                preferredAmmo = validAmmo.get(0);
+                preferredAmmo = validAmmo.getFirst();
             }
             return preferredAmmo;
         } finally {
