@@ -60,6 +60,7 @@ import megamek.client.ui.clientGUI.ClientGUI;
 import megamek.client.ui.clientGUI.DialogOptionListener;
 import megamek.client.ui.dialogs.MMDialogs.MMConfirmDialog;
 import megamek.client.ui.panels.DialogOptionComponentYPanel;
+import megamek.client.ui.panels.phaseDisplay.lobby.VictoryConditionsDialog;
 import megamek.common.TechConstants;
 import megamek.common.options.GameOptions;
 import megamek.common.options.IBasicOption;
@@ -197,7 +198,7 @@ public class GameOptionsDialog extends AbstractButtonDialog implements ActionLis
         for (List<DialogOptionComponentYPanel> comps : optionComps.values()) {
             // Each option in the list should have the same value, so picking the first is fine
             if (!comps.isEmpty()) {
-                DialogOptionComponentYPanel comp = comps.get(0);
+                DialogOptionComponentYPanel comp = comps.getFirst();
                 if (comp.hasChanged()) {
                     changed.addElement(comp.changedOption());
                     comp.setOptionChanged(false);
@@ -221,7 +222,7 @@ public class GameOptionsDialog extends AbstractButtonDialog implements ActionLis
             // Each option in the list should have the same value, so picking
             // the first is fine
             if (!comps.isEmpty()) {
-                IBasicOption option = comps.get(0).changedOption();
+                IBasicOption option = comps.getFirst().changedOption();
                 output.addElement(option);
             }
         }
@@ -244,6 +245,9 @@ public class GameOptionsDialog extends AbstractButtonDialog implements ActionLis
 
         for (Enumeration<IOptionGroup> i = options.getGroups(); i.hasMoreElements(); ) {
             IOptionGroup group = i.nextElement();
+            if (isVictoryGroupHiddenForLobby(group)) {
+                continue;
+            }
             JPanel groupPanel = addGroup(group);
             for (Enumeration<IOption> j = group.getOptions(); j.hasMoreElements(); ) {
                 IOption option = j.nextElement();
@@ -257,6 +261,18 @@ public class GameOptionsDialog extends AbstractButtonDialog implements ActionLis
     }
 
     /**
+     * @param group the option group about to be added as a tab
+     *
+     * @return {@code true} when the group is the victory options group and this dialog is used in the lobby - the
+     *       lobby's Victory Conditions dialog edits those options instead. Scenario setup and mid-game use of this
+     *       dialog keep the tab, as no lobby button exists in those contexts.
+     */
+    private boolean isVictoryGroupHiddenForLobby(IOptionGroup group) {
+        boolean isInLobby = (clientGui != null) && clientGui.getClient().getGame().getPhase().isLounge();
+        return isInLobby && VictoryConditionsDialog.VICTORY_OPTIONS_GROUP_NAME.equals(group.getName());
+    }
+
+    /**
      * When show is true, options that contain the given String str are shown. When show is false, these options are
      * hidden and deselected. Used to show/hide unofficial options.
      */
@@ -264,7 +280,7 @@ public class GameOptionsDialog extends AbstractButtonDialog implements ActionLis
         for (List<DialogOptionComponentYPanel> comps : optionComps.values()) {
             // Each option in the list should have the same value, so picking the first is fine
             if (!comps.isEmpty()) {
-                DialogOptionComponentYPanel comp = comps.get(0);
+                DialogOptionComponentYPanel comp = comps.getFirst();
                 if (isUnofficialOption(comp)) {
                     comp.setVisible(shouldShow(comp));
                     if (!shouldShow(comp)) {
@@ -497,6 +513,28 @@ public class GameOptionsDialog extends AbstractButtonDialog implements ActionLis
             }
             optionComp.setSelected(option.stringValue());
             optionComp.setEditable(editable);
+        } else if (option.getName().equals(OptionsConstants.ADVANCED_NEURAL_INTERFACE_MODE)) {
+            optionComp.addValue(OptionsConstants.NEURAL_INTERFACE_MODE_OFF);
+            optionComp.addValue(OptionsConstants.NEURAL_INTERFACE_MODE_PILOT_ONLY);
+            optionComp.addValue(OptionsConstants.NEURAL_INTERFACE_MODE_FULL_TRACKING);
+            optionComp.setSelected(option.stringValue());
+            optionComp.setEditable(editable);
+        } else if (option.getName().equals(OptionsConstants.ADVANCED_GHOST_TARGET_MODE)) {
+            optionComp.addValue(OptionsConstants.GHOST_TARGET_MODE_LEGACY);
+            optionComp.addValue(OptionsConstants.GHOST_TARGET_MODE_STANDARD);
+            optionComp.setSelected(option.stringValue());
+            // Mode dropdown only editable when TacOps Ghost Targets is enabled
+            boolean ghostTargetsEnabled = options.getOption(
+                  OptionsConstants.ADVANCED_TAC_OPS_GHOST_TARGET).booleanValue();
+            optionComp.setEditable(editable && ghostTargetsEnabled);
+        } else if (option.getName().equals(OptionsConstants.ADVANCED_GHOST_TARGET_MAX)) {
+            // Ghost target max only applies to Legacy mode
+            IOption advancedOption = options.getOption(OptionsConstants.ADVANCED_GHOST_TARGET_MODE);
+            boolean isLegacyMode = advancedOption != null && OptionsConstants.GHOST_TARGET_MODE_LEGACY.equals(
+                  advancedOption.stringValue());
+            boolean ghostTargetsEnabled = options.getOption(
+                  OptionsConstants.ADVANCED_TAC_OPS_GHOST_TARGET).booleanValue();
+            optionComp.setEditable(editable && isLegacyMode && ghostTargetsEnabled);
         } else if (option.getName().equals(OptionsConstants.ADVANCED_GROUND_MOVEMENT_MEK_LANCE_MOVEMENT)) {
             // Disable if individual init is on
             if (!options.getOption(OptionsConstants.RPG_INDIVIDUAL_INITIATIVE).booleanValue()) {
@@ -745,7 +783,15 @@ public class GameOptionsDialog extends AbstractButtonDialog implements ActionLis
 
     @Override
     public void optionSwitched(DialogOptionComponentYPanel clickedComp, IOption option, int i) {
-        // tracks changes to a combobox option - nothing implemented yet
+        if (option.getName().equals(OptionsConstants.ADVANCED_GHOST_TARGET_MODE)) {
+            boolean isLegacyMode = OptionsConstants.GHOST_TARGET_MODE_LEGACY.equals(clickedComp.getValue());
+            List<DialogOptionComponentYPanel> maxComps = optionComps.get(OptionsConstants.ADVANCED_GHOST_TARGET_MAX);
+            if (maxComps != null) {
+                for (DialogOptionComponentYPanel maxComp : maxComps) {
+                    maxComp.setEditable(editable && isLegacyMode);
+                }
+            }
+        }
     }
 
     @Override
@@ -774,7 +820,7 @@ public class GameOptionsDialog extends AbstractButtonDialog implements ActionLis
                 for (List<DialogOptionComponentYPanel> comps : optionComps.values()) {
                     // Each option in the list should have the same value, so picking the first is fine
                     if (!comps.isEmpty()) {
-                        DialogOptionComponentYPanel comp = comps.get(0);
+                        DialogOptionComponentYPanel comp = comps.getFirst();
                         if (comp.hasChanged()) {
                             changed.add(comp.getOption());
                         }
@@ -786,7 +832,7 @@ public class GameOptionsDialog extends AbstractButtonDialog implements ActionLis
                 for (IOption opt : changed) {
                     List<DialogOptionComponentYPanel> comps = optionComps.get(opt.getName());
                     if (!comps.isEmpty()) {
-                        comps.get(0).setOptionChanged(true);
+                        comps.getFirst().setOptionChanged(true);
                     }
                 }
             }
@@ -801,7 +847,7 @@ public class GameOptionsDialog extends AbstractButtonDialog implements ActionLis
                     return;
                 }
             }
-            optionComps.get(OptionsConstants.BASE_HIDE_UNOFFICIAL).get(0).setSelected(!butUnofficial.isSelected());
+            optionComps.get(OptionsConstants.BASE_HIDE_UNOFFICIAL).getFirst().setSelected(!butUnofficial.isSelected());
             toggleOptions();
             refreshSearchPanel();
 
