@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2000-2004 Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2002-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2002-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -34,13 +34,16 @@
 package megamek.client.ui.dialogs.customMek;
 
 import java.awt.Container;
+import java.awt.FlowLayout;
 import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
 import java.awt.Insets;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.awt.event.InputEvent;
 import java.awt.event.ItemEvent;
 import java.awt.event.ItemListener;
+import java.awt.event.KeyEvent;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Enumeration;
@@ -48,9 +51,11 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Objects;
 import javax.swing.*;
+import javax.swing.border.EmptyBorder;
 import javax.swing.text.DefaultFormatterFactory;
 import javax.swing.text.NumberFormatter;
 
+import com.formdev.flatlaf.extras.components.FlatTabbedPane;
 import megamek.client.Client;
 import megamek.client.ui.GBC;
 import megamek.client.ui.Messages;
@@ -114,7 +119,7 @@ public class CustomMekDialog extends AbstractButtonDialog
     private JPanel panOptions;
     // private JScrollPane scrOptions;
 
-    private JTabbedPane tabAll;
+    private final FlatTabbedPane tabAll = new FlatTabbedPane();
 
     private final JTextField fldInit = new JTextField(3);
     private final JTextField fldCommandInit = new JTextField(3);
@@ -153,6 +158,9 @@ public class CustomMekDialog extends AbstractButtonDialog
     private final JLabel labDeployHullDown = new JLabel(Messages.getString("CustomMekDialog.labDeployHullDown"),
           SwingConstants.RIGHT);
     private final JCheckBox chDeployHullDown = new JCheckBox();
+    private final JLabel labDeployDugIn = new JLabel(Messages.getString("CustomMekDialog.labDeployDugIn"),
+          SwingConstants.RIGHT);
+    private final JCheckBox chDeployDugIn = new JCheckBox();
     private final JLabel labHidden = new JLabel(Messages.getString("CustomMekDialog.labHidden"), SwingConstants.RIGHT);
     private final JCheckBox chHidden = new JCheckBox();
 
@@ -191,8 +199,7 @@ public class CustomMekDialog extends AbstractButtonDialog
     private final JButton butCancel = new JButton(Messages.getString("Cancel"));
     private final JButton butNext = new JButton(Messages.getString("Next"));
     private final JButton butPrev = new JButton(Messages.getString("Previous"));
-    private EquipChoicePanel m_equip;
-    private final JPanel panEquip = new JPanel();
+    private EquipChoicePanel equipChoicePanel;
     private final List<Entity> entities;
     private boolean okay;
     private int status = CustomMekDialog.DONE;
@@ -254,6 +261,7 @@ public class CustomMekDialog extends AbstractButtonDialog
             throw new IllegalStateException("Must pass at least one Entity!");
         }
 
+        bindArrowKeys();
         initialize();
     }
 
@@ -272,7 +280,41 @@ public class CustomMekDialog extends AbstractButtonDialog
             throw new IllegalStateException("Must pass at least one Entity!");
         }
 
+        bindArrowKeys();
         initialize();
+    }
+
+    /**
+     * Binds Alt+Left Arrow and Alt+Right Arrow keys to the Next and Previous buttons to allow keyboard navigation
+     */
+    private void bindArrowKeys() {
+        JRootPane rootPane = getRootPane();
+
+        // Actions
+        Action nextAction = new AbstractAction() {
+            @Override
+            public void actionPerformed(ActionEvent e) {
+                butNext.doClick();
+            }
+        };
+
+        Action prevAction = new AbstractAction() {
+            @Override
+            public void actionPerformed(ActionEvent e) {
+                butPrev.doClick();
+            }
+        };
+
+        // InputMap & ActionMap
+        InputMap inputMap = rootPane.getInputMap(JComponent.WHEN_IN_FOCUSED_WINDOW);
+        ActionMap actionMap = rootPane.getActionMap();
+
+        // Bind keys
+        inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_RIGHT, InputEvent.ALT_DOWN_MASK), "next");
+        actionMap.put("next", nextAction);
+
+        inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_LEFT, InputEvent.ALT_DOWN_MASK), "previous");
+        actionMap.put("previous", prevAction);
     }
 
     public String getSelectedTab() {
@@ -300,7 +342,7 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     private void setOptions() {
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
         IOption option;
         for (final DialogOptionComponentYPanel newVar : optionComps) {
             option = newVar.getOption();
@@ -344,9 +386,20 @@ public class CustomMekDialog extends AbstractButtonDialog
                 continue;
             }
 
+            // Hide EI Implant group when neural interface rules are Off
+            if (group.getKey().equalsIgnoreCase(PilotOptions.EI_ADVANTAGES)) {
+                IOption aniOption = gameOptions().getOption(OptionsConstants.ADVANCED_NEURAL_INTERFACE_MODE);
+                String aniMode = (aniOption == null) ?
+                      OptionsConstants.NEURAL_INTERFACE_MODE_OFF :
+                      aniOption.stringValue();
+                if (OptionsConstants.NEURAL_INTERFACE_MODE_OFF.equals(aniMode)) {
+                    continue;
+                }
+            }
+
             addGroup(group, gridBagLayout, c);
 
-            Entity entity = entities.get(0);
+            Entity entity = entities.getFirst();
             for (Enumeration<IOption> j = group.getOptions(); j.hasMoreElements(); ) {
                 IOption option = j.nextElement();
 
@@ -390,7 +443,7 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     private void setPartReps() {
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
         IOption option;
         for (final DialogOptionComponentYPanel newVar : partRepsComps) {
             option = newVar.getOption();
@@ -407,7 +460,7 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     public void refreshPartReps() {
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
         panPartReps.removeAll();
         partRepsComps = new ArrayList<>();
         for (Enumeration<IOptionGroup> i = partReps.getGroups(); i.hasMoreElements(); ) {
@@ -439,7 +492,7 @@ public class CustomMekDialog extends AbstractButtonDialog
 
     private void addOption(IOption option, GridBagLayout gridBagLayout, GridBagConstraints gridBagConstraints,
           boolean editable) {
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
         DialogOptionComponentYPanel optionComp = new DialogOptionComponentYPanel(this, option, editable);
 
         if ((OptionsConstants.GUNNERY_WEAPON_SPECIALIST).equals(option.getName())) {
@@ -515,17 +568,16 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     /**
-     * Adds inline prosthetic enhancement controls (dropdown + spinner) to the option component panel.
-     * For Standard Enhanced: adds slot 1 controls only.
-     * For Improved Enhanced: adds slot 1 and slot 2 controls.
+     * Adds inline prosthetic enhancement controls (dropdown + spinner) to the option component panel. For Standard
+     * Enhanced: adds slot 1 controls only. For Improved Enhanced: adds slot 1 and slot 2 controls.
      *
-     * @param optionComp The DialogOptionComponentYPanel to add controls to
-     * @param entity The entity being configured
+     * @param optionComp         The DialogOptionComponentYPanel to add controls to
+     * @param entity             The entity being configured
      * @param isStandardEnhanced True for MD_PL_ENHANCED (slot 1 only), false for MD_PL_I_ENHANCED (both slots)
      */
     private void addInlineProstheticControls(DialogOptionComponentYPanel optionComp, Entity entity,
           boolean isStandardEnhanced) {
-        Infantry infantry = (entity instanceof Infantry) ? (Infantry) entity : null;
+        ConvInfantry infantry = (entity instanceof ConvInfantry) ? (ConvInfantry) entity : null;
         String typeTooltip = Messages.getString("CustomMekDialog.ProstheticTypeTooltip");
         String countTooltip = Messages.getString("CustomMekDialog.ProstheticCountTooltip");
 
@@ -672,7 +724,7 @@ public class CustomMekDialog extends AbstractButtonDialog
      * @param entity     The entity being configured
      */
     private void addInlineExtraneousControls(DialogOptionComponentYPanel optionComp, Entity entity) {
-        Infantry infantry = (entity instanceof Infantry) ? (Infantry) entity : null;
+        ConvInfantry infantry = (entity instanceof ConvInfantry) ? (ConvInfantry) entity : null;
         String pair1Tooltip = Messages.getString("CustomMekDialog.ExtraneousPair1Tooltip");
         String pair2Tooltip = Messages.getString("CustomMekDialog.ExtraneousPair2Tooltip");
 
@@ -761,7 +813,7 @@ public class CustomMekDialog extends AbstractButtonDialog
      * Updates the visibility of inline prosthetic enhancement controls when checkbox state changes.
      *
      * @param optionName The option that was toggled (MD_PL_ENHANCED, MD_PL_I_ENHANCED, or MD_PL_EXTRA_LIMBS)
-     * @param isChecked Whether the checkbox is now checked
+     * @param isChecked  Whether the checkbox is now checked
      */
     private void updateInlineProstheticVisibility(String optionName, boolean isChecked) {
         if (OptionsConstants.MD_PL_ENHANCED.equals(optionName)) {
@@ -798,11 +850,11 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     /**
-     * Applies prosthetic enhancement settings from the UI to the entity.
-     * Reads from the controls of whichever prosthetic option (Standard or Improved) is currently selected.
+     * Applies prosthetic enhancement settings from the UI to the entity. Reads from the controls of whichever
+     * prosthetic option (Standard or Improved) is currently selected.
      */
     private void applyProstheticEnhancement(Entity entity) {
-        if (!(entity instanceof Infantry infantry)) {
+        if (!(entity instanceof ConvInfantry infantry)) {
             return;
         }
 
@@ -834,7 +886,7 @@ public class CustomMekDialog extends AbstractButtonDialog
     /**
      * Applies a single prosthetic enhancement slot from UI to entity.
      */
-    private void applyProstheticSlot(Infantry infantry, JComboBox<String> typeDropdown,
+    private void applyProstheticSlot(ConvInfantry infantry, JComboBox<String> typeDropdown,
           JSpinner countSpinner, boolean isSlot1) {
         int selectedIndex = typeDropdown.getSelectedIndex();
         if (selectedIndex <= 0) {
@@ -876,7 +928,7 @@ public class CustomMekDialog extends AbstractButtonDialog
      * needed.
      */
     private void applyExtraneousLimbs(Entity entity) {
-        if (!(entity instanceof Infantry infantry)) {
+        if (!(entity instanceof ConvInfantry infantry)) {
             return;
         }
 
@@ -899,7 +951,7 @@ public class CustomMekDialog extends AbstractButtonDialog
     /**
      * Applies a single extraneous limb pair from UI to entity.
      */
-    private void applyExtraneousPair(Infantry infantry, JComboBox<String> typeDropdown, boolean isPair1) {
+    private void applyExtraneousPair(ConvInfantry infantry, JComboBox<String> typeDropdown, boolean isPair1) {
         int selectedIndex = typeDropdown.getSelectedIndex();
         if (selectedIndex <= 0) {
             // "None" selected - clear this pair
@@ -935,7 +987,7 @@ public class CustomMekDialog extends AbstractButtonDialog
     public void optionClicked(DialogOptionComponentYPanel comp, IOption option, boolean state) {
         // Enforce max 2 sensory implants rule for infantry
         // Defensive check for isConventionalInfantry in case options are set through other means
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
         if (state && entity.isConventionalInfantry() && isSensoryImplant(option.getName())) {
             int count = countSelectedSensoryImplants(comp);
             if (count >= 2) {
@@ -1050,26 +1102,36 @@ public class CustomMekDialog extends AbstractButtonDialog
         // The pilot needs the implant AND the unit needs the interface hardware for EI to function
         // ProtoMeks already have EI built-in, so no action needed for them
         if (option.getName().equals(OptionsConstants.MD_EI_IMPLANT)) {
-            boolean anyChanged = false;
             for (Entity e : entities) {
                 if (canHaveEIInterface(e)) {
-                    boolean hadEI = e.hasEiCockpit();
                     setEIInterface(e, state);
-                    if (hadEI != state) {
-                        anyChanged = true;
-                    }
                 }
             }
-            // Show feedback message - use invokeLater to avoid interfering with checkbox event handling
-            if (anyChanged) {
-                final boolean added = state;
-                javax.swing.SwingUtilities.invokeLater(() -> {
-                    String msg = added
-                          ? Messages.getString("CustomMekDialog.EIInterfaceAdded")
-                          : Messages.getString("CustomMekDialog.EIInterfaceRemoved");
-                    String title = Messages.getString("CustomMekDialog.EIInterfaceTitle");
-                    JOptionPane.showMessageDialog(this, msg, title, JOptionPane.INFORMATION_MESSAGE);
-                });
+            // Also update the Equipment tab checkbox directly
+            if (equipChoicePanel != null) {
+                equipChoicePanel.setEICockpitSelected(state);
+            }
+        }
+
+        // DNI implant options (VDNI, BVDNI, Proto DNI) update entity crew options directly
+        // This ensures Equipment tab sees correct implant state when checking hasDNIImplant()
+        // The equipment is not auto-added - user must confirm via the checkbox (IO p.83)
+        if (option.getName().equals(OptionsConstants.MD_VDNI)
+              || option.getName().equals(OptionsConstants.MD_BVDNI)
+              || option.getName().equals(OptionsConstants.MD_PROTO_DNI)) {
+            // Update entity crew options directly (like EI does via setEIInterface)
+            for (Entity e : entities) {
+                e.getCrew().getOptions().getOption(option.getName()).setValue(state);
+            }
+            // Also update Equipment tab checkbox if it exists
+            if (equipChoicePanel != null) {
+                boolean anyDniSelected = isOptionSelected(OptionsConstants.MD_VDNI)
+                      || isOptionSelected(OptionsConstants.MD_BVDNI)
+                      || isOptionSelected(OptionsConstants.MD_PROTO_DNI);
+                if (state) {
+                    anyDniSelected = true;
+                }
+                equipChoicePanel.setDNICockpitModSelected(anyDniSelected);
             }
         }
     }
@@ -1254,7 +1316,7 @@ public class CustomMekDialog extends AbstractButtonDialog
         if (this.clientGUI == null) {
             return;
         }
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
 
         if (entity instanceof QuadVee) {
             choStartingMode.removeItemListener(this);
@@ -1425,7 +1487,7 @@ public class CustomMekDialog extends AbstractButtonDialog
             SliderDialog sl = new SliderDialog(clientGUI.getFrame(),
                   Messages.getString("CustomMekDialog.offboardDistanceTitle"),
                   Messages.getString("CustomMekDialog.offboardDistanceQuestion"),
-                  Math.min(Math.max(entities.get(0).getOffBoardDistance(), 17), maxDistance),
+                  Math.clamp(entities.getFirst().getOffBoardDistance(), 17, maxDistance),
                   17,
                   maxDistance);
             if (!sl.showDialog()) {
@@ -1521,7 +1583,7 @@ public class CustomMekDialog extends AbstractButtonDialog
         }
 
         if (isAero || isShip) {
-            if ((velocity > (2 * entities.get(0).getWalkMP())) || (velocity < 0)) {
+            if ((velocity > (2 * entities.getFirst().getWalkMP())) || (velocity < 0)) {
                 msg = Messages.getString("CustomMekDialog.EnterCorrectVelocity");
                 title = Messages.getString("CustomMekDialog.NumberFormatError");
                 JOptionPane.showMessageDialog(clientGUI == null ? this : clientGUI.getFrame(),
@@ -1559,15 +1621,15 @@ public class CustomMekDialog extends AbstractButtonDialog
         }
         // Apply single-entity settings
         if (entities.size() == 1) {
-            Entity entity = entities.get(0);
+            Entity entity = entities.getFirst();
 
-            for (int i = 0; i < entities.get(0).getCrew().getSlotCount(); i++) {
+            for (int i = 0; i < entities.getFirst().getCrew().getSlotCount(); i++) {
                 String name = panCrewMember[i].getPilotName();
                 String nick = panCrewMember[i].getNickname();
                 String hits = panCrewMember[i].getHits();
                 Gender gender = panCrewMember[i].getGender();
                 if (gender == Gender.RANDOMIZE) {
-                    gender = entities.get(0).getCrew().getGender(i);
+                    gender = entities.getFirst().getCrew().getGender(i);
                 }
                 boolean missing = panCrewMember[i].getMissing();
                 int gunnery;
@@ -1711,7 +1773,7 @@ public class CustomMekDialog extends AbstractButtonDialog
             setOptions();
             setQuirks();
             setPartReps();
-            m_equip.applyChoices();
+            equipChoicePanel.applyChoices();
 
             // Apply prosthetic enhancement and extraneous limbs for conventional infantry
             if (entity.isConventionalInfantry()) {
@@ -1727,6 +1789,17 @@ public class CustomMekDialog extends AbstractButtonDialog
                     ((BattleArmor) entity).setInternal(1);
                 }
             }
+
+            // Sync EI Interface equipment with EI Implant pilot option state
+            // This ensures equipment is correct even if user didn't click the checkbox
+            if (canHaveEIInterface(entity)) {
+                boolean hasEIImplant = entity.hasAbility(OptionsConstants.MD_EI_IMPLANT);
+                setEIInterface(entity, hasEIImplant);
+            }
+
+            // DNI Cockpit Modification is manually controlled via EquipChoicePanel when
+            // tracking neural interface hardware is enabled. Auto-add removed to allow
+            // testing scenarios where pilot has implant but unit lacks DNI hardware (IO p.83).
         }
 
         // Apply multiple-entity settings
@@ -1826,8 +1899,16 @@ public class CustomMekDialog extends AbstractButtonDialog
                 // Should the entity begin the game prone?
                 entity.setProne(chDeployProne.isSelected());
 
-                // Should the entity begin the game prone?
+                // Should the entity begin the game hull down?
                 entity.setHullDown(chDeployHullDown.isSelected());
+            }
+
+            // Should the infantry begin the game dug in? (TO:AR p.106; mechanized infantry cannot dig in.)
+            if ((entity instanceof Infantry deployingInfantry) && !deployingInfantry.isMechanized()
+                  && gameOptions().booleanOption(OptionsConstants.ADVANCED_TAC_OPS_DIG_IN)) {
+                deployingInfantry.setDugIn(chDeployDugIn.isSelected()
+                      ? Infantry.DUG_IN_COMPLETE
+                      : Infantry.DUG_IN_NONE);
             }
         }
 
@@ -1871,12 +1952,12 @@ public class CustomMekDialog extends AbstractButtonDialog
 
     private void updateStartingModeOptions() {
         final int index = choStartingMode.getSelectedIndex();
-        if (entities.get(0) instanceof QuadVee) {
+        if (entities.getFirst() instanceof QuadVee) {
             labDeployProne.setEnabled(index == 0);
             chDeployProne.setEnabled(index == 0);
-        } else if (entities.get(0) instanceof LandAirMek) {
+        } else if (entities.getFirst() instanceof LandAirMek) {
             int mode = index;
-            if (((LandAirMek) entities.get(0)).getLAMType() == LandAirMek.LAM_BIMODAL &&
+            if (((LandAirMek) entities.getFirst()).getLAMType() == LandAirMek.LAM_BIMODAL &&
                   mode == LandAirMek.CONV_MODE_AIR_MEK) {
                 mode = LandAirMek.CONV_MODE_FIGHTER;
             }
@@ -1902,10 +1983,10 @@ public class CustomMekDialog extends AbstractButtonDialog
         Entity nextOne;
         Entity entity;
         if (forward) {
-            entity = entities.get(entities.size() - 1);
+            entity = entities.getLast();
             nextOne = game.getNextEntityFromList(entity);
         } else {
-            entity = entities.get(0);
+            entity = entities.getFirst();
             nextOne = game.getPreviousEntityFromList(entity);
         }
         while ((nextOne != null) && !entities.contains(nextOne)) {
@@ -1922,11 +2003,7 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     private void setupEquip() {
-        Entity entity = entities.get(0);
-        GridBagLayout gbl = new GridBagLayout();
-        panEquip.setLayout(gbl);
-        m_equip = new EquipChoicePanel(entity, clientGUI, client);
-        panEquip.add(m_equip, GBC.eol());
+        equipChoicePanel = new EquipChoicePanel(entities.getFirst(), clientGUI, client);
         // EI Interface is automatically added/removed based on pilot EI Implant option
         // No checkbox needed - the pilot option drives it (IO p.69)
     }
@@ -1946,17 +2023,19 @@ public class CustomMekDialog extends AbstractButtonDialog
 
     /**
      * Checks if the entity is eligible for an EI Interface. Per IO p.69, EI Interface may be installed in any BattleMek
-     * or Battle Armor built using a Clan technology base. ProtoMeks always have EI built-in and cannot toggle it. EI
-     * Interface was introduced in 3040.
+     * or Battle Armor built using a Clan technology base. ProtoMeks always have EI built-in and cannot toggle it.
+     * Availability is determined by the equipment's introduction date.
      *
      * @param entity the entity to check
      *
      * @return true if the entity can have an EI Interface toggled
      */
     private boolean canHaveEIInterface(Entity entity) {
-        // EI Interface introduced in 3040
+        // Check game year against EI Interface introduction date
+        EquipmentType eiEquipment = EquipmentType.get("EIInterface");
         int gameYear = client.getGame().getOptions().intOption(OptionsConstants.ALLOWED_YEAR);
-        if (gameYear < 3040) {
+        int eiIntroYear = (eiEquipment != null) ? eiEquipment.getIntroductionDate(true) : 3040; // Clan tech
+        if (gameYear < eiIntroYear) {
             return false;
         }
         // ProtoMeks always have EI - cannot toggle
@@ -1987,7 +2066,10 @@ public class CustomMekDialog extends AbstractButtonDialog
             try {
                 EquipmentType eiType = EquipmentType.get("EIInterface");
                 if (eiType != null) {
-                    entity.addEquipment(eiType, Entity.LOC_NONE);
+                    Mounted<?> eiMounted = entity.addEquipment(eiType, Entity.LOC_NONE);
+                    // Set EI to "On" mode by default - pilot got the implant to use it
+                    // Mode 1 is "Initiate enhanced imaging" (On)
+                    eiMounted.setMode(1);
                 }
             } catch (LocationFullException e) {
                 // Should not happen for 0-slot equipment
@@ -2008,7 +2090,7 @@ public class CustomMekDialog extends AbstractButtonDialog
 
     @Override
     protected Container createCenterPane() {
-        final Entity entity = entities.get(0);
+        final Entity entity = entities.getFirst();
         boolean multipleEntities = (entities.size() > 1) || (entity instanceof FighterSquadron);
         boolean quirksEnabled = gameOptions().booleanOption(OptionsConstants.ADVANCED_STRATOPS_QUIRKS);
         boolean partialRepairsEnabled = gameOptions().booleanOption(OptionsConstants.ADVANCED_STRATOPS_PARTIAL_REPAIRS);
@@ -2071,7 +2153,11 @@ public class CustomMekDialog extends AbstractButtonDialog
         }
         // set up the panels
         JPanel mainPanel = new JPanel(new GridBagLayout());
-        tabAll = new JTabbedPane();
+        tabAll.setTabLayoutPolicy(JTabbedPane.SCROLL_TAB_LAYOUT);
+        tabAll.setTabPlacement(JTabbedPane.LEFT);
+        tabAll.setTabType(FlatTabbedPane.TabType.card);
+        tabAll.setTabAlignment(FlatTabbedPane.TabAlignment.leading);
+        tabAll.setMinimumTabWidth(new JLabel("X".repeat(15)).getPreferredSize().width);
 
         JPanel panCrew = new JPanel(new GridBagLayout());
         panCrewMember = new CustomPilotViewPanel[entity.getCrew().getSlotCount()];
@@ -2087,7 +2173,13 @@ public class CustomMekDialog extends AbstractButtonDialog
         mainPanel.add(tabAll, GBC.eol().fill(GridBagConstraints.BOTH).insets(5, 5, 5, 5));
         mainPanel.add(panButtons, GBC.eol().anchor(GridBagConstraints.CENTER));
 
-        JScrollPane scrEquip = new JScrollPane(panEquip);
+        // Wrap the equipment choice panel to make it top-left-aligned
+        JPanel equipmentWrapPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
+        equipmentWrapPanel.add(equipChoicePanel);
+        JScrollPane scrEquip = new JScrollPane(equipmentWrapPanel);
+        scrEquip.getVerticalScrollBar().setUnitIncrement(16);
+        scrEquip.setBorder(new EmptyBorder(10, 25, 0, 0));
+
         // Don't show the crew panel if there's multiple entities or no crew to show
         if (!multipleEntities && panCrewMember.length > 0) {
             if (panCrewMember.length > 1) {
@@ -2105,8 +2197,8 @@ public class CustomMekDialog extends AbstractButtonDialog
                 memberScrollPane.getVerticalScrollBar().setUnitIncrement(16);
                 tabAll.addTab(Messages.getString("CustomMekDialog.tabPilot"), memberScrollPane);
             }
-            tabAll.addTab(Messages.getString("CustomMekDialog.tabEquipment"), scrEquip);
         }
+        tabAll.addTab(Messages.getString("CustomMekDialog.tabEquipment"), scrEquip);
 
         if (this.clientGUI != null) {
             tabAll.addTab(Messages.getString(editableDeployment ?
@@ -2115,13 +2207,20 @@ public class CustomMekDialog extends AbstractButtonDialog
             if (quirksEnabled && !multipleEntities) {
                 JScrollPane scrQuirks = new JScrollPane(panQuirks);
                 scrQuirks.getVerticalScrollBar().setUnitIncrement(16);
-                scrQuirks.setPreferredSize(scrEquip.getPreferredSize());
                 tabAll.addTab("Quirks", scrQuirks);
             }
             if (partialRepairsEnabled && !multipleEntities) {
                 tabAll.addTab(Messages.getString("CustomMekDialog.tabPartialRepairs"), new JScrollPane(panPartReps));
             }
         }
+
+        // Refresh neural interface checkboxes when switching to Equipment tab
+        // This picks up changes made in the Pilot tab (e.g., adding EI/DNI implant)
+        tabAll.addChangeListener(e -> {
+            if (equipChoicePanel != null) {
+                equipChoicePanel.refreshNeuralInterfaceCheckboxes();
+            }
+        });
 
         options = entity.getCrew().getOptions();
         partReps = entity.getPartialRepairs();
@@ -2167,7 +2266,7 @@ public class CustomMekDialog extends AbstractButtonDialog
             refreshDeployment();
             // Disable conversions for loaded units so we don't get fighter LAMs in mek bays
             // and vice versa
-            choStartingMode.setEnabled(entities.get(0).getTransportId() == Entity.NONE);
+            choStartingMode.setEnabled(entities.getFirst().getTransportId() == Entity.NONE);
         }
         if (isVTOL || isLAM || isGlider) {
             panDeploy.add(labStartHeight, GBC.std());
@@ -2235,6 +2334,28 @@ public class CustomMekDialog extends AbstractButtonDialog
             panDeploy.add(chDeployProne, GBC.eol());
             chDeployProne.setSelected(entity.isProne() && !entity.isHullDown());
             chDeployProne.addItemListener(this);
+        }
+
+        // Vehicles may deploy already hull-down (TO:AR p.19) when the hull-down option is enabled. The option is
+        // offered only to hull-down-capable vehicles (not Large Vehicles, and not naval/hydrofoil/submarine units);
+        // the deploy hex must still be fortified, which is validated at deployment time.
+        boolean isHullDownCapableVehicle = (entity instanceof Tank deployingVehicle)
+              && deployingVehicle.isHullDownCapable()
+              && gameOptions().booleanOption(OptionsConstants.ADVANCED_GROUND_MOVEMENT_TAC_OPS_HULL_DOWN);
+        if (isHullDownCapableVehicle) {
+            panDeploy.add(labDeployHullDown, GBC.std());
+            panDeploy.add(chDeployHullDown, GBC.eol());
+            chDeployHullDown.setSelected(entity.isHullDown());
+            chDeployHullDown.addItemListener(this);
+        }
+
+        // Infantry may deploy already dug in (TO:AR p.106). Mechanized infantry cannot dig in, so this is
+        // offered only to non-mechanized infantry and only when the dig-in option is enabled.
+        if ((entity instanceof Infantry deployingInfantry) && !deployingInfantry.isMechanized()
+              && gameOptions().booleanOption(OptionsConstants.ADVANCED_TAC_OPS_DIG_IN)) {
+            panDeploy.add(labDeployDugIn, GBC.std());
+            panDeploy.add(chDeployDugIn, GBC.eol());
+            chDeployDugIn.setSelected(deployingInfantry.getDugIn() == Infantry.DUG_IN_COMPLETE);
         }
 
         refreshDeployment();
@@ -2318,7 +2439,7 @@ public class CustomMekDialog extends AbstractButtonDialog
             fldCurrentFuel.setEnabled(false);
             fldStartHeight.setEnabled(false);
             chDeployAirborne.setEnabled(false);
-            m_equip.initialize();
+            equipChoicePanel.initialize();
         }
 
         setResizable(true);
