@@ -1,7 +1,7 @@
 /*
  * Copyright (c) 2002-2005 Ben Mazur (bmazur@sev.org)
  * Copyright (c) 2013 Edward Cullen (eddy@obsessedcomputers.co.uk)
- * Copyright (C) 2021-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2021-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -53,6 +53,7 @@ import java.io.File;
 import java.io.FileReader;
 import java.io.Reader;
 import java.io.StreamTokenizer;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -62,10 +63,14 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.Vector;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.atomic.AtomicReference;
 import javax.imageio.ImageIO;
+import javax.swing.JCheckBox;
 import javax.swing.JCheckBoxMenuItem;
 import javax.swing.JDialog;
 import javax.swing.JMenu;
+import javax.swing.JOptionPane;
 import javax.swing.JPanel;
 import javax.swing.SwingUtilities;
 
@@ -78,6 +83,7 @@ import megamek.client.ui.Messages;
 import megamek.client.ui.clientGUI.AbstractClientGUI;
 import megamek.client.ui.clientGUI.ClientGUI;
 import megamek.client.ui.clientGUI.GUIPreferences;
+import megamek.client.ui.clientGUI.GifRecordingMode;
 import megamek.client.ui.clientGUI.IClientGUI;
 import megamek.client.ui.clientGUI.boardview.BoardView;
 import megamek.client.ui.util.ScalingPopup;
@@ -202,7 +208,21 @@ public final class MinimapPanel extends JPanel implements IPreferenceChangeListe
     private final JDialog dialog;
     private Client client;
     private final IClientGUI clientGui;
+    /**
+     * Game UUIDs that already have a {@link MinimapPanel} writing the summary GIF. A multi-board game creates one
+     * MinimapPanel per board, but the GIF file is keyed per game, so without this guard several panels would write the
+     * same file at once and then race when saving at game end. Only the first panel per game owns the GIF.
+     */
+    private static final Set<String> GIF_WRITING_GAMES = ConcurrentHashMap.newKeySet();
+
+    /**
+     * Per-game consent for GIF recording when the preference is {@link GifRecordingMode#ASK}, keyed by game UUID so the
+     * player is asked only once even in multi-board games with several minimap panels.
+     */
+    private static final Map<String, Boolean> GIF_RECORDING_DECISIONS = new ConcurrentHashMap<>();
+
     private GifWriterThread gifWriterThread;
+    private volatile boolean ownsSummaryGif = false;
     private int margin = MARGIN;
     private int topMargin;
     private int leftMargin;
@@ -336,11 +356,14 @@ public final class MinimapPanel extends JPanel implements IPreferenceChangeListe
 
             @Override
             public void gamePhaseChange(GamePhaseChangeEvent e) {
-                if ((GUIP.getGameSummaryMinimap() || GUIP.getGifGameSummaryMinimap())
-                      && (e.getOldPhase().isDeployment() || e.getOldPhase().isMovement()
+                boolean phaseProducesSummaryFrame = e.getOldPhase().isDeployment() || e.getOldPhase().isMovement()
                       || e.getOldPhase().isTargeting() || e.getOldPhase().isPremovement()
                       || e.getOldPhase().isPreFiring() || e.getOldPhase().isFiring()
-                      || e.getOldPhase().isPhysical())) {
+                      || e.getOldPhase().isPhysical();
+                // GIF consent is established before any rendering happens, so a game the player declined (or a
+                // NEVER preference) does no summary work at all - the recording costs CPU for the whole game.
+                boolean recordGifFrame = phaseProducesSummaryFrame && shouldRecordGifForThisGame();
+                if (phaseProducesSummaryFrame && (GUIP.getGameSummaryMinimap() || recordGifFrame)) {
 
                     File dir = new File(Configuration.gameSummaryImagesMMDir(), game.getTimestampString());
                     if (!dir.exists()) {
@@ -356,24 +379,41 @@ public final class MinimapPanel extends JPanel implements IPreferenceChangeListe
                         if (GUIP.getGameSummaryMinimap()) {
                             ImageIO.write(image, "png", imgFile);
                         }
-                        if (GUIP.getGifGameSummaryMinimap()) {
-                            if (gifWriterThread == null || !gifWriterThread.isAlive()) {
-                                gifWriterThread = new GifWriterThread(new GifWriter(game.getTimestampString()),
-                                      "GifWriterThread");
-                                gifWriterThread.start();
+                        if (recordGifFrame) {
+                            // Only one panel per game writes the GIF. In a multi-board game every board's panel
+                            // reaches this code, but only the owner (first to claim the game UUID) writes; the others
+                            // skip it so they don't share the file and race when saving at game end. Ownership is
+                            // tracked separately from the thread instance, so the owner also restarts its writer if
+                            // that thread has died, instead of silently ending the GIF for the rest of the game.
+                            if ((gifWriterThread == null) || !gifWriterThread.isAlive()) {
+                                if (ownsSummaryGif || GIF_WRITING_GAMES.add(game.getUUIDString())) {
+                                    ownsSummaryGif = true;
+                                    gifWriterThread = new GifWriterThread(new GifWriter(game.getUUIDString()),
+                                          "GifWriterThread");
+                                    gifWriterThread.start();
+                                }
                             }
-                            gifWriterThread.addFrame(image, 400);
+                            if (ownsSummaryGif && (gifWriterThread != null) && gifWriterThread.isAlive()) {
+                                gifWriterThread.addFrame(image, 400);
+                            }
                         }
                     } catch (Exception ex) {
                         logger.error(ex, "Error saving game summary image.");
                     }
                 }
 
-                if (e.getNewPhase().isVictory() && (gifWriterThread != null) && gifWriterThread.isAlive()) {
-                    try {
-                        gifWriterThread.stopThread();
-                    } catch (Exception ex) {
-                        logger.error(ex, "Error closing gif writer.");
+                if (e.getNewPhase().isVictory()) {
+                    GIF_RECORDING_DECISIONS.remove(game.getUUIDString());
+                    if (ownsSummaryGif && (gifWriterThread != null)) {
+                        try {
+                            if (gifWriterThread.isAlive()) {
+                                gifWriterThread.stopThread();
+                            }
+                        } catch (Exception ex) {
+                            logger.error(ex, "Error closing gif writer.");
+                        } finally {
+                            releaseSummaryGifOwnership();
+                        }
                     }
                 }
 
@@ -435,12 +475,134 @@ public final class MinimapPanel extends JPanel implements IPreferenceChangeListe
         }
         if (client != null) {
             client.addCloseClientListener(() -> {
-                if (gifWriterThread != null && gifWriterThread.isAlive()) {
-                    gifWriterThread.stopThread(true);
+                GIF_RECORDING_DECISIONS.remove(game.getUUIDString());
+                if (ownsSummaryGif && (gifWriterThread != null)) {
+                    if (gifWriterThread.isAlive()) {
+                        gifWriterThread.stopThread(true);
+                    }
+                    releaseSummaryGifOwnership();
                 }
             });
         }
         GUIP.addPreferenceChangeListener(this);
+    }
+
+    /**
+     * Releases this panel's claim on the summary GIF so a later game (a new UUID) can be written, and so the entry does
+     * not linger after the writer has stopped. Safe to call when this panel is not the owner.
+     */
+    private void releaseSummaryGifOwnership() {
+        if (ownsSummaryGif) {
+            GIF_WRITING_GAMES.remove(game.getUUIDString());
+            ownsSummaryGif = false;
+        }
+    }
+
+    /**
+     * Prompts the local player, if necessary, whether to record this game's combat-summary GIF and stores the answer,
+     * so the per-phase recording never has to ask mid-game. This is the "at game start" entry point, intended to be
+     * called when the player readies up in the lobby.
+     *
+     * <p>No-op unless the preference is {@link GifRecordingMode#ASK} and no decision has been made for this game
+     * yet, so it is safe to call every time the player toggles ready. Must be called on the event dispatch thread.</p>
+     *
+     * @param game   The game about to start
+     * @param parent The parent component for the dialog, or {@code null} to center on screen
+     */
+    public static void promptForGifRecordingConsent(Game game, @Nullable Component parent) {
+        if (GUIPreferences.getInstance().getGifGameSummaryRecording() != GifRecordingMode.ASK) {
+            return;
+        }
+        GIF_RECORDING_DECISIONS.computeIfAbsent(game.getUUIDString(),
+              gameId -> askWhetherToRecordGif(parent));
+    }
+
+    /**
+     * Returns {@code true} when the combat-summary GIF should be recorded for this game. With
+     * {@link GifRecordingMode#ASK} (the default) the answer normally comes from the lobby prompt
+     * ({@link #promptForGifRecordingConsent(Game, Component)}); this asks lazily only as a fallback for a game that
+     * never went through a lobby ready (e.g. a save resumed mid-game).
+     *
+     * @return {@code true} if this game should be recorded
+     */
+    private boolean shouldRecordGifForThisGame() {
+        return switch (GUIP.getGifGameSummaryRecording()) {
+            case ALWAYS -> true;
+            case NEVER -> false;
+            case ASK -> recallOrAskRecordingDecision();
+        };
+    }
+
+    /**
+     * Returns this game's remembered recording decision, asking the player (on the EDT) if none exists yet. The dialog
+     * is deliberately shown outside any map computation: blocking on the EDT while holding a map lock could deadlock if
+     * the EDT itself entered this code for another board's panel.
+     *
+     * @return {@code true} if this game should be recorded; {@code false} also when the dialog could not be shown (in
+     *       that case no decision is stored, so the player is asked again at the next frame)
+     */
+    private boolean recallOrAskRecordingDecision() {
+        String gameId = game.getUUIDString();
+        Boolean existingDecision = GIF_RECORDING_DECISIONS.get(gameId);
+        if (existingDecision != null) {
+            return existingDecision;
+        }
+        Boolean answer = askWhetherToRecordGifOnEdt();
+        if (answer == null) {
+            return false;
+        }
+        Boolean concurrentDecision = GIF_RECORDING_DECISIONS.putIfAbsent(gameId, answer);
+        return (concurrentDecision != null) ? concurrentDecision : answer;
+    }
+
+    /**
+     * Shows the recording dialog on the event dispatch thread, blocking the calling game-event thread until the player
+     * answers.
+     *
+     * @return The player's answer, or {@code null} if the dialog could not be shown
+     */
+    private @Nullable Boolean askWhetherToRecordGifOnEdt() {
+        if (SwingUtilities.isEventDispatchThread()) {
+            return askWhetherToRecordGif(this);
+        }
+        AtomicReference<Boolean> answerHolder = new AtomicReference<>();
+        try {
+            SwingUtilities.invokeAndWait(() -> answerHolder.set(askWhetherToRecordGif(this)));
+        } catch (InterruptedException interruptedException) {
+            Thread.currentThread().interrupt();
+            return null;
+        } catch (InvocationTargetException invocationTargetException) {
+            logger.error(invocationTargetException, "Error showing the GIF recording dialog");
+            return null;
+        }
+        return answerHolder.get();
+    }
+
+    /**
+     * Asks the player whether this game should be recorded as a combat-summary GIF. Checking "remember my choice"
+     * persists the answer as {@link GifRecordingMode#ALWAYS} or {@link GifRecordingMode#NEVER} so the dialog never
+     * shows again. Must be called on the event dispatch thread.
+     *
+     * @param parent The parent component for the dialog, or {@code null} to center on screen
+     *
+     * @return {@code true} if the player wants this game recorded
+     */
+    private static boolean askWhetherToRecordGif(@Nullable Component parent) {
+        JCheckBox rememberChoice = new JCheckBox(Messages.getString("MinimapPanel.RecordGifDialog.remember"));
+        Object[] dialogContent = { Messages.getString("MinimapPanel.RecordGifDialog.message"),
+                                   Messages.getString("MinimapPanel.RecordGifDialog.warning"),
+                                   rememberChoice };
+        int response = JOptionPane.showConfirmDialog(parent,
+              dialogContent,
+              Messages.getString("MinimapPanel.RecordGifDialog.title"),
+              JOptionPane.YES_NO_OPTION,
+              JOptionPane.QUESTION_MESSAGE);
+        boolean recordThisGame = (response == JOptionPane.YES_OPTION);
+        if (rememberChoice.isSelected()) {
+            GUIPreferences.getInstance()
+                  .setGifGameSummaryRecording(recordThisGame ? GifRecordingMode.ALWAYS : GifRecordingMode.NEVER);
+        }
+        return recordThisGame;
     }
 
     /**
@@ -449,11 +611,10 @@ public final class MinimapPanel extends JPanel implements IPreferenceChangeListe
     private void initializeDialog() {
         if (dialog != null) {
             if (dialog.getMouseListeners().length == 0) {
-                dialog.addMouseListener(mouseListener);
-                dialog.addMouseMotionListener(mouseMotionListener);
-                dialog.addMouseWheelListener(mouseWheelListener);
-                dialog.addComponentListener(componentListener);
-                dialog.addComponentListener(componentListener);
+                dialog.addMouseListener(minimapMouseListener);
+                dialog.addMouseMotionListener(minimapMouseMotionListener);
+                dialog.addMouseWheelListener(minimapMouseWheelListener);
+                dialog.addComponentListener(minimapComponentListener);
             }
         }
     }
@@ -687,7 +848,7 @@ public final class MinimapPanel extends JPanel implements IPreferenceChangeListe
               + HEX_SIDE_BY_SIN30[zoom] + (2 * margin);
         int requiredHeight = minimized ? BUTTON_HEIGHT
               : (((2 * board.getHeight()) + 1)
-              * HEX_SIDE_BY_COS30[zoom]) + (2 * margin) + buttonHeight;
+                 * HEX_SIDE_BY_COS30[zoom]) + (2 * margin) + buttonHeight;
 
         if (dialog != null) {
             setSize(new Dimension(requiredWidth, requiredHeight));
@@ -996,7 +1157,7 @@ public final class MinimapPanel extends JPanel implements IPreferenceChangeListe
         double[] relSize = bv.getVisibleArea();
         for (int i = 0; i < 4; i++) {
             // keep between 0 and 1 to not fall outside the minimap
-            relSize[i] = Math.min(1, Math.max(0, relSize[i]));
+            relSize[i] = Math.clamp(relSize[i], 0, 1);
         }
 
         int x1 = (int) (relSize[0] * (HEX_SIDE[zoom] + HEX_SIDE_BY_SIN30[zoom]) * board.getWidth()) + leftMargin;
@@ -2077,7 +2238,7 @@ public final class MinimapPanel extends JPanel implements IPreferenceChangeListe
         }
     };
 
-    MouseListener mouseListener = new MouseAdapter() {
+    MouseListener minimapMouseListener = new MouseAdapter() {
         @Override
         public void mouseClicked(MouseEvent me) {
             if (me.getButton() == MouseEvent.BUTTON1) {
@@ -2108,7 +2269,7 @@ public final class MinimapPanel extends JPanel implements IPreferenceChangeListe
 
     };
 
-    MouseMotionListener mouseMotionListener = new MouseMotionAdapter() {
+    MouseMotionListener minimapMouseMotionListener = new MouseMotionAdapter() {
 
         @Override
         public void mouseDragged(MouseEvent me) {
@@ -2123,7 +2284,7 @@ public final class MinimapPanel extends JPanel implements IPreferenceChangeListe
         }
     };
 
-    MouseWheelListener mouseWheelListener = new MouseWheelListener() {
+    MouseWheelListener minimapMouseWheelListener = new MouseWheelListener() {
         @Override
         public void mouseWheelMoved(MouseWheelEvent we) {
             Point mapPoint = SwingUtilities.convertPoint(dialog, we.getX(), we.getY(), MinimapPanel.this);
@@ -2137,7 +2298,7 @@ public final class MinimapPanel extends JPanel implements IPreferenceChangeListe
         }
     };
 
-    ComponentListener componentListener = new ComponentAdapter() {
+    ComponentListener minimapComponentListener = new ComponentAdapter() {
         @Override
         public void componentShown(ComponentEvent ce) {
             refreshMap();
