@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2000-2005 Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2002-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2002-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -46,6 +46,7 @@ import megamek.client.ui.Messages;
 import megamek.client.ui.clientGUI.ClientGUI;
 import megamek.client.ui.clientGUI.boardview.BoardView;
 import megamek.client.ui.clientGUI.boardview.IBoardView;
+import megamek.client.ui.clientGUI.boardview.overlay.ToastLevel;
 import megamek.client.ui.dialogs.phaseDisplay.BombPayloadDialog;
 import megamek.client.ui.dialogs.phaseDisplay.SuicideImplantsDialog;
 import megamek.client.ui.dialogs.phaseDisplay.TargetChoiceDialog;
@@ -113,11 +114,15 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
         FIRE_MODE("fireMode"),
         FIRE_SPOT("fireSpot"),
         FIRE_FLIP_ARMS("fireFlipArms"),
+        FIRE_FLIP_MOUNT("fireFlipMount"),
+        FIRE_ROTATE_TURRET("fireRotateTurret"),
+        FIRE_ROTATE_TURRET_2("fireRotateTurret2"),
         FIRE_FIND_CLUB("fireFindClub"),
         FIRE_STRAFE("fireStrafe"),
         FIRE_SEARCHLIGHT("fireSearchlight"),
         FIRE_CLEAR_TURRET("fireClearTurret"),
         FIRE_CLEAR_WEAPON("fireClearWeaponJam"),
+        FIRE_EXTINGUISH("fireExtinguish"),
         FIRE_CALLED("fireCalled"),
         FIRE_CANCEL("fireCancel"),
         FIRE_ACTIVATE_SPA("fireActivateSPA"),
@@ -248,6 +253,10 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
      */
     private final List<Coords> strafingCoords = new ArrayList<>(5);
 
+    /** The last hex the player selected, used by the firing-phase Extinguish button. */
+    private Coords selectedCoords = null;
+    private int selectedBoardId = 0;
+
     /**
      * Creates and lays out a new firing phase display for the specified clientGUI.getClient().
      */
@@ -371,11 +380,25 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
         int i = 0;
         FiringCommand[] commands = FiringCommand.values();
         CommandComparator comparator = new CommandComparator();
+        // The two turret-rotate buttons belong side by side: pin the rear button's priority to the front one's, so
+        // the stable sort keeps them adjacent regardless of any saved button-order preferences.
+        FiringCommand.FIRE_ROTATE_TURRET_2.setPriority(FiringCommand.FIRE_ROTATE_TURRET.getPriority());
         Arrays.sort(commands, comparator);
         for (FiringCommand cmd : commands) {
             if (cmd == FiringCommand.FIRE_NEXT
                   || cmd == FiringCommand.FIRE_MORE
                   || cmd == FiringCommand.FIRE_CANCEL) {
+                continue;
+            }
+            // The Directional Torso Mount (BMM p.83) is a Mek-only quirk, so other unit types never show its button.
+            if ((cmd == FiringCommand.FIRE_FLIP_MOUNT) && (currentEntity() != null)
+                  && !(currentEntity() instanceof Mek)) {
+                continue;
+            }
+            // The rear-turret rotate button exists only for dual-turret vehicles (the first rotate button then
+            // covers the front turret).
+            if ((cmd == FiringCommand.FIRE_ROTATE_TURRET_2)
+                  && !((currentEntity() instanceof Tank tank) && !tank.hasNoDualTurret())) {
                 continue;
             }
             if (i % buttonsPerGroup == 0) {
@@ -479,11 +502,18 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
 
             setFindClubEnabled(FindClubAction.canMekFindClub(game, en));
             setFlipArmsEnabled(!currentEntity().getAlreadyTwisted() && currentEntity().canFlipArms());
+            // Rebuild the button ribbon for the newly selected unit: the Flip Mount button is Mek-only, so the
+            // ribbon differs by unit type (see getButtonList()).
+            setupButtonPanel();
+            updateFlipMount();
+            updateRotateTurret();
             updateSearchlight();
             updateRHS();
             updateClearTurret();
             updateClearWeaponJam();
             updateStrafe();
+            selectedCoords = null;
+            updateExtinguish();
 
             // Hidden units can only spot
             if ((currentEntity() != null) && currentEntity().isHidden()) {
@@ -491,6 +521,9 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
                 setTwistEnabled(false);
                 setFindClubEnabled(false);
                 setFlipArmsEnabled(false);
+                setFlipMountEnabled(false);
+                setRotateTurretEnabled(false);
+                setRotateRearTurretEnabled(false);
                 setStrafeEnabled(false);
                 clientgui.getUnitDisplay().wPan.setToHit("Hidden units are only allowed to spot!");
             }
@@ -595,10 +628,14 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
         butSkipTurn.setEnabled(false);
         setNextTargetEnabled(false);
         setFlipArmsEnabled(false);
+        setFlipMountEnabled(false);
+        setRotateTurretEnabled(false);
+        setRotateRearTurretEnabled(false);
         setFireModeEnabled(false);
         setFireCalledEnabled(false);
         setFireClearTurretEnabled(false);
         setFireClearWeaponJamEnabled(false);
+        setFireExtinguishEnabled(false);
         setStrafeEnabled(false);
     }
 
@@ -627,7 +664,8 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
               && (weaponMounted.getType() instanceof WeaponType)
               && weaponMounted.getType().hasFlag(WeaponType.F_BA_INDIVIDUAL)
               && (weaponMounted.curMode().getName().contains("-shot"))
-              && (Integer.parseInt(weaponMounted.curMode().getName().replace("-shot", "")) > currentEntity().getTotalInternal())) {
+              && (Integer.parseInt(weaponMounted.curMode().getName().replace("-shot", ""))
+              > currentEntity().getTotalInternal())) {
             weaponMounted.setMode(0);
         }
         clientgui.getClient().sendModeChange(weaponMounted.getEntity().getId(), weaponMounted.getEquipmentNum(), nMode);
@@ -1326,12 +1364,19 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
         // set the weapon as used
         mounted.setUsedThisRound(true);
 
-        // find the next available weapon
-        WeaponMounted nextWeapon = clientgui.getUnitDisplay().wPan.getNextWeapon();
+        // find the next available weapon. A solo-attack weapon (e.g. the fire extinguisher) is the unit's
+        // only attack this turn, so don't advance to other weapons - doing so would show a confusing
+        // "already firing a weapon that can only be fired by itself" message for a weapon the player never
+        // tried to fire.
+        WeaponMounted nextWeapon = mounted.getType().hasFlag(WeaponType.F_SOLO_ATTACK)
+              ? null
+              : clientgui.getUnitDisplay().wPan.getNextWeapon();
 
         // we fired a weapon, can't clear turret jams or weapon jams anymore
         updateClearTurret();
         updateClearWeaponJam();
+        // an attack was declared, so firefighting is no longer available this phase
+        updateExtinguish();
 
         // check; if there are no ready weapons, you're done.
         if ((nextWeapon == null)) {
@@ -1422,9 +1467,8 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
         }
 
         if (currentEntity().isINarcedWith(INarcPod.HAYWIRE)) {
-            String title = Messages.getString("FiringDisplay.CantSpotDialog.title");
-            String body = Messages.getString("FiringDisplay.CantSpotDialog.message");
-            clientgui.doAlertDialog(title, body);
+            clientgui.addToast(ToastLevel.WARNING,
+                  Messages.getString("FiringDisplay.CantSpotDialog.message"), currentEntity());
             return;
         }
         // confirm this action
@@ -1439,6 +1483,7 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
     /**
      * Removes all current fire
      */
+    @Override
     protected void clearAttacks() {
         isStrafing = false;
         strafingCoords.clear();
@@ -1614,7 +1659,10 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
         // allow spotting
         if ((attacker != null) && !attacker.isSpotting() && attacker.canSpot() && (target != null)
               && game.getOptions().booleanOption(OptionsConstants.BASE_INDIRECT_FIRE)) {
-            boolean hasLos = LosEffects.calculateLOS(game, attacker, target).canSee();
+            // Spotting LOS: pass spotting=true so a VTOL Mast Mount's +1 sensor elevation is
+            // applied (TacOps). This matches the server-side spot resolution and lets a mast-mount
+            // VTOL hovering behind cover enable the Spot button. Non-mast units are unaffected.
+            boolean hasLos = LosEffects.calculateLOS(game, attacker, target, true).canSee();
             // In double-blind, we need to "spot" the target as well as LoS
             if (hasLos
                   && game.getOptions().booleanOption(OptionsConstants.ADVANCED_DOUBLE_BLIND)
@@ -1723,6 +1771,8 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
         updateSuicideImplants();
         updateClearWeaponJam();
         updateClearTurret();
+        updateFlipMount();
+        updateRotateTurret();
 
         // Hidden units can only spot
         if ((attacker != null) && attacker.isHidden()) {
@@ -1787,10 +1837,22 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
 
     private void addTorsoTwistAction(int direction) {
         if (direction != currentEntity().getSecondaryFacing()) {
+            // Keep the player's selected weapon selected across the twist; updateForNewAction() -> refreshAll()
+            // would otherwise jump the weapon list back to the first weapon.
+            WeaponMounted selectedWeapon = clientgui.getUnitDisplay().wPan.getSelectedWeapon();
+            // A Directional Torso Mount arc (BMM p.83) is declared independently of the twist, so preserve it:
+            // clearAttacks() would otherwise drop the mount facing action while rebuilding the attacks.
+            List<DirectionalMountFacingAction> mountFacings = pendingDirectionalMountFacings(NO_EXCLUDED_LOCATION);
             clearAttacks();
             addAttack(new TorsoTwistAction(currentEntity, direction));
             currentEntity().setSecondaryFacing(direction);
+            for (DirectionalMountFacingAction mountFacing : mountFacings) {
+                addAttack(mountFacing);
+            }
             updateForNewAction();
+            if (selectedWeapon != null) {
+                clientgui.getUnitDisplay().wPan.selectWeapon(selectedWeapon);
+            }
         }
     }
 
@@ -1828,6 +1890,12 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
 
         Coords coords = event.getCoords();
         if (isMyTurn() && (coords != null) && (currentEntity() != null)) {
+            // Remember the clicked hex so the Extinguish button can act on it, even when the hex holds no
+            // normal target (a bare burning hex) or is the unit's own hex. Done for any click so the button
+            // never acts on a stale, previously-selected hex.
+            selectedCoords = coords;
+            selectedBoardId = event.getBoardId();
+            updateExtinguish();
             if (isStrafing) {
                 if (currentEntity().getPassedThroughBoardId() == event.getBoardId()) {
                     strafingCoords.clear();
@@ -1969,6 +2037,12 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
             jumpToTarget(true, onlyValidTargets, ignoreAllies);
         } else if (ev.getActionCommand().equals(FiringCommand.FIRE_FLIP_ARMS.getCmd())) {
             updateFlipArms(!currentEntity().getArmsFlipped());
+        } else if (ev.getActionCommand().equals(FiringCommand.FIRE_FLIP_MOUNT.getCmd())) {
+            flipDirectionalMount();
+        } else if (ev.getActionCommand().equals(FiringCommand.FIRE_ROTATE_TURRET.getCmd())) {
+            rotateSelectedMount();
+        } else if (ev.getActionCommand().equals(FiringCommand.FIRE_ROTATE_TURRET_2.getCmd())) {
+            rotateRearTurret();
             // Fire Mode - More Fire Mode button handling - Rasia
         } else if (ev.getActionCommand().equals(FiringCommand.FIRE_MODE.getCmd())) {
             changeMode(true);
@@ -1983,6 +2057,8 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
             doClearTurret();
         } else if (ev.getActionCommand().equals(FiringCommand.FIRE_CLEAR_WEAPON.getCmd())) {
             doClearWeaponJam();
+        } else if (ev.getActionCommand().equals(FiringCommand.FIRE_EXTINGUISH.getCmd())) {
+            extinguish();
         } else if (ev.getActionCommand().equals(FiringCommand.FIRE_STRAFE.getCmd())) {
             startStrafe();
         } else if (ev.getActionCommand().equals(FiringCommand.FIRE_ACTIVATE_SPA.getCmd())) {
@@ -2017,6 +2093,27 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
         refreshAll();
     }
 
+    /**
+     * Refreshes the firing-phase target panel after a Directional Torso Mount arc change. See
+     * {@link AttackPhaseDisplay#flipDirectionalMount()}, which drives the shared flip logic.
+     */
+    @Override
+    protected void refreshTargetAfterMountChange() {
+        updateTarget();
+    }
+
+    /**
+     * Declares a torso/turret twist to the given facing through the firing-phase twist path, used by the Rotate Turret
+     * dialog for vehicle main turrets. See {@link AttackPhaseDisplay#rotateSelectedMount()}.
+     */
+    @Override
+    protected void declareSecondaryFacing(int facing) {
+        if ((currentEntity() == null) || currentEntity().getAlreadyTwisted()) {
+            return;
+        }
+        addTorsoTwistAction(currentEntity().clipSecondaryFacing(facing));
+    }
+
     protected void updateSearchlight() {
         setSearchlightEnabled(
               (currentEntity() != null)
@@ -2038,6 +2135,67 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
     private void updateClearWeaponJam() {
         setFireClearWeaponJamEnabled((currentEntity() instanceof Tank) && ((Tank) currentEntity()).canUnjamWeapon()
               && attacks.isEmpty());
+    }
+
+    private void updateExtinguish() {
+        setFireExtinguishEnabled(canExtinguishSelectedHex());
+    }
+
+    /**
+     * @return {@code true} if the current unit can extinguish the hex the player has selected: the unit is a
+     *       firefighting engineer or carries a ready fire extinguisher, it has not already declared an attack this
+     *       phase, and the selected hex is burning (and adjacent, for firefighting engineers).
+     */
+    private boolean canExtinguishSelectedHex() {
+        Entity firingUnit = currentEntity();
+        if ((firingUnit == null) || !attacks.isEmpty() || (selectedCoords == null)) {
+            return false;
+        }
+        boolean firefighter = firingUnit.isFirefighter();
+        if (!firefighter && !hasReadyFireExtinguisher(firingUnit)) {
+            return false;
+        }
+        // The hex must be on the unit's own board; a hex on a different board is never reachable.
+        if (firingUnit.getBoardId() != selectedBoardId) {
+            return false;
+        }
+        Hex hex = game.getBoard(selectedBoardId).getHex(selectedCoords);
+        if ((hex == null) || !hex.containsTerrain(Terrains.FIRE)) {
+            return false;
+        }
+        if (firingUnit.getPosition() == null) {
+            return false;
+        }
+        int distanceToHex = firingUnit.getPosition().distance(selectedCoords);
+        // Firefighting engineers fight an adjacent hex, not the one they stand in (TO:AuE p.153). Other units use a
+        // range-1 Fire Extinguisher weapon, which reaches only their own hex or an adjacent one.
+        return firefighter ? (distanceToHex == 1) : (distanceToHex <= 1);
+    }
+
+    private boolean hasReadyFireExtinguisher(Entity entity) {
+        return entity.getWeaponList().stream()
+              .anyMatch(weapon -> weapon.getType().hasFlag(WeaponType.F_EXTINGUISHER) && !weapon.isUsedThisRound());
+    }
+
+    /**
+     * Declares an attack to extinguish the fire in the player-selected hex, using a carried fire extinguisher weapon if
+     * present, otherwise the firefighting engineers' own gear. This consumes the unit's attack (TO:AuE p.153 -
+     * firefighting is done in place of a weapon attack).
+     */
+    private void extinguish() {
+        if (!canExtinguishSelectedHex()) {
+            return;
+        }
+        // Prefer a real fire extinguisher weapon (coolant trucks, etc.); firefighting engineers use their
+        // currently selected weapon, which their FIRE_ENGINEERS specialization routes to the extinguisher path.
+        for (WeaponMounted weapon : currentEntity().getWeaponList()) {
+            if (weapon.getType().hasFlag(WeaponType.F_EXTINGUISHER) && !weapon.isUsedThisRound()) {
+                clientgui.getUnitDisplay().wPan.selectWeapon(weapon);
+                break;
+            }
+        }
+        target(new HexTarget(selectedCoords, selectedBoardId, Targetable.TYPE_HEX_EXTINGUISH));
+        fire();
     }
 
     private void updateStrafe() {
@@ -2175,6 +2333,30 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
         clientgui.getMenuBar().setEnabled(FiringCommand.FIRE_FLIP_ARMS.getCmd(), enabled);
     }
 
+    @Override
+    protected void setFlipMountEnabled(boolean enabled) {
+        buttons.get(FiringCommand.FIRE_FLIP_MOUNT).setEnabled(enabled);
+        clientgui.getMenuBar().setEnabled(FiringCommand.FIRE_FLIP_MOUNT.getCmd(), enabled);
+    }
+
+    @Override
+    protected void setRotateTurretEnabled(boolean enabled) {
+        buttons.get(FiringCommand.FIRE_ROTATE_TURRET).setEnabled(enabled);
+        clientgui.getMenuBar().setEnabled(FiringCommand.FIRE_ROTATE_TURRET.getCmd(), enabled);
+    }
+
+    @Override
+    protected void setRotateRearTurretEnabled(boolean enabled) {
+        buttons.get(FiringCommand.FIRE_ROTATE_TURRET_2).setEnabled(enabled);
+        clientgui.getMenuBar().setEnabled(FiringCommand.FIRE_ROTATE_TURRET_2.getCmd(), enabled);
+    }
+
+    @Override
+    protected void setRotateTurretLabel(boolean dualTurretTank) {
+        buttons.get(FiringCommand.FIRE_ROTATE_TURRET).setText(Messages.getString(
+              dualTurretTank ? "FiringDisplay.fireRotateTurretFront" : "FiringDisplay.fireRotateTurret"));
+    }
+
     protected void setSpotEnabled(boolean enabled) {
         buttons.get(FiringCommand.FIRE_SPOT).setEnabled(enabled);
         clientgui.getMenuBar().setEnabled(FiringCommand.FIRE_SPOT.getCmd(), enabled);
@@ -2198,6 +2380,29 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
      */
     protected void adaptFireModeEnabled(Mounted<?> m) {
         setFireModeEnabled(m.isModeSwitchable() && m.hasModes());
+        updateFireModeTooltip(m);
+    }
+
+    /**
+     * Refreshes the Mode button tooltip for the selected weapon. Most weapons keep the generic tooltip, but the Fire
+     * Extinguisher carried by firefighting engineers gets extra helper text explaining its Firefight/Support modes
+     * (TO:AuE p.153), since the choice of which platoon rolls is not otherwise obvious from the button.
+     *
+     * @param weapon the currently selected weapon
+     */
+    private void updateFireModeTooltip(Mounted<?> weapon) {
+        MegaMekButton modeButton = buttons.get(FiringCommand.FIRE_MODE);
+        String tooltip = createToolTip(FiringCommand.FIRE_MODE.getCmd(), "FiringDisplay.",
+              FiringCommand.FIRE_MODE.getHotKeyDesc());
+        if (weapon.getType().hasFlag(WeaponType.F_EXTINGUISHER)) {
+            String helper = Messages.getString("FiringDisplay.fireMode.extinguisher.tooltip");
+            if (tooltip.contains("</BODY>")) {
+                tooltip = tooltip.replace("</BODY>", "<BR>" + helper + "</BODY>");
+            } else {
+                tooltip = "<HTML><BODY>" + helper + "</BODY></HTML>";
+            }
+        }
+        modeButton.setToolTipText(tooltip);
     }
 
     protected void setFireCalledEnabled(boolean enabled) {
@@ -2213,6 +2418,11 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
     protected void setFireClearWeaponJamEnabled(boolean enabled) {
         buttons.get(FiringCommand.FIRE_CLEAR_WEAPON).setEnabled(enabled);
         clientgui.getMenuBar().setEnabled(FiringCommand.FIRE_CLEAR_WEAPON.getCmd(), enabled);
+    }
+
+    protected void setFireExtinguishEnabled(boolean enabled) {
+        buttons.get(FiringCommand.FIRE_EXTINGUISH).setEnabled(enabled);
+        clientgui.getMenuBar().setEnabled(FiringCommand.FIRE_EXTINGUISH.getCmd(), enabled);
     }
 
     protected void setStrafeEnabled(boolean enabled) {
@@ -2395,7 +2605,7 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
         // Do we have a single choice?
         if (targets.size() == 1) {
             // Return that choice.
-            choice = targets.get(0);
+            choice = targets.getFirst();
         } else if (targets.size() > 1) {
             // If we have multiple choices, display a selection dialog.
             choice = TargetChoiceDialog.showSingleChoiceDialog(clientgui.getFrame(),
@@ -2454,14 +2664,14 @@ public class FiringDisplay extends AttackPhaseDisplay implements ListSelectionLi
             return Collections.emptyList();
 
         } else if (centerCandidates.size() == 1) {
-            centerIndex = centerCandidates.get(0);
+            centerIndex = centerCandidates.getFirst();
 
         } else {
             // incomplete: choose one of the candidates
             centerIndex = (int) JOptionPane.showInputDialog(clientgui.getFrame(),
                   "Choose the hex to center the strafing path on",
                   "Strafing - Choose Hex", JOptionPane.QUESTION_MESSAGE, null,
-                  centerCandidates.toArray(), centerCandidates.get(0));
+                  centerCandidates.toArray(), centerCandidates.getFirst());
         }
 
         // When the flight path is shorter than 5 hexes, only that many can be strafed (may happen for aeros that are
