@@ -46,8 +46,8 @@ import megamek.common.equipment.Mounted;
 import megamek.common.equipment.WeaponType;
 import megamek.common.equipment.enums.MiscTypeFlag;
 import megamek.common.options.IOption;
+import megamek.common.units.ConvInfantry;
 import megamek.common.units.EntityMovementMode;
-import megamek.common.units.Infantry;
 import megamek.common.verifier.EntityVerifier;
 import megamek.common.weapons.infantry.InfantryWeapon;
 
@@ -58,9 +58,9 @@ import megamek.common.weapons.infantry.InfantryWeapon;
  */
 public class InfantryTROView extends TROView {
 
-    private final Infantry inf;
+    private final ConvInfantry inf;
 
-    public InfantryTROView(Infantry infantry) {
+    public InfantryTROView(ConvInfantry infantry) {
         this.inf = infantry;
     }
 
@@ -123,9 +123,9 @@ public class InfantryTROView extends TROView {
             }
         }
         StringJoiner sj = new StringJoiner(", ");
-        for (int i = 0; i < Infantry.NUM_SPECIALIZATIONS; i++) {
+        for (int i = 0; i < ConvInfantry.NUM_SPECIALIZATIONS; i++) {
             if (inf.hasSpecialization(1 << i)) {
-                sj.add(Infantry.getSpecializationName(1 << i));
+                sj.add(ConvInfantry.getSpecializationName(1 << i));
             }
         }
         if (!sj.toString().isBlank()) {
@@ -154,11 +154,12 @@ public class InfantryTROView extends TROView {
 
         sj = new StringJoiner(", ");
         final int maxRange = rangeWeapon.getInfantryRange() * 3;
-        int lastMod = Compute.getInfantryRangeMods(0, rangeWeapon, inf.getSecondaryWeapon(), false).getValue();
+        int lastMod = Compute.getInfantryRangeMods(0, rangeWeapon, inf.getSecondaryWeapon(),
+              inf.getDisposableWeapon(), false).getValue();
         int hex = 0;
         for (int range = 1; range <= (maxRange + 1); range++) {
-            final int mod = Compute.getInfantryRangeMods(range, rangeWeapon, inf.getSecondaryWeapon(), false)
-                  .getValue();
+            final int mod = Compute.getInfantryRangeMods(range, rangeWeapon, inf.getSecondaryWeapon(),
+                  inf.getDisposableWeapon(), false).getValue();
             if (mod != lastMod) {
                 if ((range - hex) > 1) {
                     sj.add(String.format("%+d (%d-%d Hexes)", lastMod, hex, range - 1));
@@ -196,16 +197,19 @@ public class InfantryTROView extends TROView {
             notes.add(Messages.getString("TROView.InfantryNote.SCUBA"));
         }
         final List<EquipmentType> fieldGuns = inf.getWeaponList().stream()
-              .filter(m -> m.getLocation() == Infantry.LOC_FIELD_GUNS).map(Mounted::getType)
+              .filter(m -> m.getLocation() == ConvInfantry.LOC_FIELD_GUNS).map(Mounted::getType)
               .collect(Collectors.toList());
-        final int shots = inf.getAmmo().stream().filter(m -> m.getLocation() == Infantry.LOC_FIELD_GUNS)
+        final int shots = inf.getAmmo().stream().filter(m -> m.getLocation() == ConvInfantry.LOC_FIELD_GUNS)
               .mapToInt(Mounted::getBaseShotsLeft).sum();
         if (fieldGuns.size() > 1) {
-            notes.add(String.format(Messages.getString("TROView.InfantryNote.FieldGuns"), fieldGuns.size(),
-                  fieldGuns.get(0).getName(), shots / fieldGuns.size(), (int) fieldGuns.get(0).getTonnage(inf)));
+            notes.add(String.format(Messages.getString("TROView.InfantryNote.FieldGuns"),
+                  fieldGuns.size(),
+                  fieldGuns.getFirst().getName(),
+                  shots / fieldGuns.size(),
+                  (int) fieldGuns.getFirst().getTonnage(inf)));
         } else if (!fieldGuns.isEmpty()) {
             notes.add(String.format(Messages.getString("TROView.InfantryNote.SingleFieldGun"),
-                  fieldGuns.get(0).getName(), shots, (int) fieldGuns.get(0).getTonnage(inf)));
+                  fieldGuns.getFirst().getName(), shots, (int) fieldGuns.getFirst().getTonnage(inf)));
         }
         if ((inf.getSecondaryWeaponsPerSquad() > 1) && (inf.getSecondaryWeapon() != null)) {
             if (inf.getSecondaryWeapon().hasFlag(WeaponType.F_INF_BURST)) {
