@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2000-2002 Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2003-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2003-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -34,16 +34,7 @@
 
 package megamek.common.units;
 
-import java.util.ArrayList;
-import java.util.Enumeration;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
-import java.util.Vector;
+import java.util.*;
 
 import megamek.client.ui.clientGUI.calculationReport.CalculationReport;
 import megamek.common.CriticalSlot;
@@ -70,12 +61,12 @@ import megamek.logging.MMLogger;
 import megamek.server.totalWarfare.TWGameManager;
 
 /**
- * AbstractBuildingEntity represents a non-terrain building (e.g., a moving fortress).
- * This is the common implementation of the Mobile Structure rules from TO:AUE and Advanced Building rules from TO:AUE.
+ * AbstractBuildingEntity represents a non-terrain building (e.g., a moving fortress). This is the common implementation
+ * of the Mobile Structure rules from TO:AUE and Advanced Building rules from TO:AUE.
  * <br>
- * It contains a {@link Building} (which stores data in relative coordinates) and handles
- * translation between board coordinates and the Building's relative coordinate space.
- * Unlike BuildingTerrain, the translation is dynamic based on Entity's current position/facing.
+ * It contains a {@link Building} (which stores data in relative coordinates) and handles translation between board
+ * coordinates and the Building's relative coordinate space. Unlike BuildingTerrain, the translation is dynamic based on
+ * Entity's current position/facing.
  */
 public abstract class AbstractBuildingEntity extends Entity implements IBuilding {
 
@@ -135,10 +126,10 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
         }
         // Find which relative CubeCoord maps to this board coordinate
         return relativeLayout.entrySet().stream()
-            .filter(e -> e.getValue().equals(boardCoords))
-            .map(Map.Entry::getKey)
-            .findFirst()
-            .orElse(boardCoords.toCube());
+              .filter(e -> e.getValue().equals(boardCoords))
+              .map(Map.Entry::getKey)
+              .findFirst()
+              .orElse(boardCoords.toCube());
     }
 
     @Override
@@ -196,14 +187,12 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
         int location = weapon.getLocation();
         // Extract the level from the location number (location % building height)
         // Level 0 = ground floor, level 1 = first floor above ground, etc.
-        int level = location % getInternalBuilding().getBuildingHeight();
-        return level;
+        return location % getInternalBuilding().getBuildingHeight();
     }
 
     /**
-     * Override setPosition to populate the relativeLayout map when the entity is placed.
-     * This establishes the mapping between the building's internal relative coordinates
-     * and their actual board coordinates.
+     * Override setPosition to populate the relativeLayout map when the entity is placed. This establishes the mapping
+     * between the building's internal relative coordinates and their actual board coordinates.
      */
     @Override
     public void setPosition(Coords position) {
@@ -268,6 +257,7 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
      *
      * @return Map of relative CubeCoords to their board Coords at the given position/facing
      */
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public Map<CubeCoords, Coords> computeLayoutForPositionAndFacing(Coords testPosition, int testFacing) {
         Map<CubeCoords, Coords> hypotheticalLayout = new HashMap<>();
 
@@ -424,7 +414,7 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
         }
 
         Board board = game.getBoard(testBoardId);
-        Hex firstHex = board.getHex(coords.get(0));
+        Hex firstHex = board.getHex(coords.getFirst());
         if (firstHex == null) {
             return false;
         }
@@ -496,8 +486,8 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
     }
 
     /**
-     * Updates the relativeLayout map to reflect the current building configuration.
-     * Maps each relative CubeCoord in the building to its actual board position.
+     * Updates the relativeLayout map to reflect the current building configuration. Maps each relative CubeCoord in the
+     * building to its actual board position.
      */
     private void updateRelativeLayout() {
         relativeLayout.clear();
@@ -552,7 +542,6 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
     /**
      * Sets the primary facing.
      *
-     * @param facing
      */
     @Override
     public void setFacing(int facing) {
@@ -571,7 +560,6 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
     /**
      * Can this entity torso/turret twist the given direction?
      *
-     * @param dir
      */
     @Override
     public boolean isValidSecondaryFacing(int dir) {
@@ -580,8 +568,6 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
 
     /**
      * Returns the closest valid secondary facing to the given direction.
-     *
-     * @param dir
      *
      * @return the closest valid secondary facing.
      */
@@ -601,7 +587,7 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
     }
 
     private String[] getLocationStrings(String locationPrefix) {
-        ArrayList<String> locationAbbrvNames = new ArrayList<String>();
+        ArrayList<String> locationAbbrvNames = new ArrayList<>();
         if (getInternalBuilding() == null || getInternalBuilding().getOriginalCoordsList() == null) {
             return new String[] { locationPrefix + ' ' + LOC_BASE };
         }
@@ -630,11 +616,6 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
     /**
      * Rolls the to-hit number
      *
-     * @param table
-     * @param side
-     * @param aimedLocation
-     * @param aimingMode
-     * @param cover
      */
     @Override
     public HitData rollHitLocation(int table, int side, int aimedLocation, AimingMode aimingMode, int cover) {
@@ -644,8 +625,6 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
     /**
      * Rolls up a hit location
      *
-     * @param table
-     * @param side
      */
     @Override
     public HitData rollHitLocation(int table, int side) {
@@ -655,7 +634,6 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
     /**
      * Gets the location that excess damage transfers to. That is, one location inwards.
      *
-     * @param hit
      */
     @Override
     public HitData getTransferLocation(HitData hit) {
@@ -685,7 +663,6 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
     /**
      * Returns true if this weapon fires into the secondary facing arc. If false, assume it fires into the primary.
      *
-     * @param weaponId
      */
     @Override
     public boolean isSecondaryArcWeapon(int weaponId) {
@@ -757,7 +734,6 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
     /**
      * Add in any piloting skill mods
      *
-     * @param roll
      */
     @Override
     public PilotingRollData addEntityBonuses(PilotingRollData roll) {
@@ -810,24 +786,11 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
         return 0;
     }
 
-    /**
-     * Checks if the unit is hardened against nuclear strikes.
-     *
-     * @return true if this is a hardened unit.
-     */
     @Override
     public boolean isNuclearHardened() {
         return false;
     }
 
-    @Override
-    public boolean doomedInVacuum() {
-        return false;
-    }
-
-    /**
-     * @return the total tonnage of communications gear in this entity
-     */
     @Override
     public int getTotalCommGearTons() {
         return getExtraCommGearTons();
@@ -836,29 +799,6 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
     @Override
     public int getEngineHits() {
         return 0;
-    }
-
-    @Override
-    public String getLocationDamage(int loc) {
-        return "";
-    }
-
-    /**
-     * Returns TRUE if the entity meets the requirements for crippling damage as detailed in TW pg 258.
-     *
-     * @return boolean
-     */
-    /**
-     * Buildings are destroyed if their crew is dead, like Meks and Tanks.
-     */
-    @Override
-    public boolean isDestroyed() {
-        // Check crew death first (like Meks/Tanks)
-        if (getCrew() != null && !getCrew().isActive()) {
-            return true;
-        }
-        // Otherwise use standard destroyed flag
-        return super.isDestroyed();
     }
 
     /**
@@ -880,14 +820,11 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
      * Returns TRUE if the entity meets the requirements for crippling damage as detailed in TW pg 258. Excepting dead
      * or non-existing crew issues
      *
-     * @param checkCrew
-     *
      * @return boolean
      */
     @Override
     public boolean isCrippled(boolean checkCrew) {
         // Building is crippled if it's military and all weapons are disabled
-        // (crew death is handled by isDestroyed(), not isCrippled())
         return isMilitary() && !hasViableWeapons();
     }
 
@@ -999,11 +936,6 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
         return Entity.ETYPE_BUILDING_ENTITY;
     }
 
-
-    private void setInternalFromHex() {
-
-    }
-
     @Override
     public int getInternalForReal(int loc) {
         if (locationToRelativeCoordsMap.containsKey(loc)) {
@@ -1016,8 +948,6 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
     /**
      * Returns the amount of armor in the location specified, or IArmorState.ARMOR_NA, or IArmorState.ARMOR_DESTROYED.
      *
-     * @param loc
-     * @param rear
      */
     @Override
     public int getArmor(int loc, boolean rear) {
@@ -1197,9 +1127,18 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
         building.setBurning(onFire, boardToRelative(coords));
     }
 
+    /**
+     * Demolition charges anchor to an absolute board hex, which only works for structures that cannot move.
+     * {@link BuildingEntity} overrides this with a real implementation; {@link MobileStructure} must provide its own
+     * (or remain unsupported) if mobile structures are ever ruled to be valid demolition targets.
+     *
+     * @throws UnsupportedOperationException always; subclasses that support demolition charges must override
+     */
     @Override
     public void addDemolitionCharge(int playerId, int damage, Coords pos) {
-        building.addDemolitionCharge(playerId, damage, boardToRelative(pos));
+        throw new UnsupportedOperationException(
+              "Demolition charges are not supported on " + getClass().getSimpleName()
+                    + "; only immobile structures can have charges placed on them");
     }
 
     @Override
@@ -1253,8 +1192,6 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
     /**
      * Once a building entity has set its position, we need to update the board itself and share that with the clients
      *
-     * @param boardId
-     * @param gameManager
      */
     public void updateBuildingEntityHexes(int boardId, TWGameManager gameManager) {
         Board board = getGame().getBoard(boardId);
@@ -1311,7 +1248,7 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
             gameManager.sendRemovedBuildings(removedBuildings);
         }
 
-        gameManager.sendNewBuildings(new Vector<IBuilding>(List.of(this)));
+        gameManager.sendNewBuildings(new Vector<>(List.of(this)));
 
         // Do this as a separate loop - All building terrains need added before we can initialize building exits
         for (Coords buildingCoords : getCoordsList()) {
@@ -1358,11 +1295,7 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
                 // Gun emplacements never connect (single hex buildings)
                 boolean isGunEmplacement = (hex.terrainLevel(Terrains.BLDG_CLASS) == IBuilding.GUN_EMPLACEMENT);
 
-                if (sameType && sameClass && !isGunEmplacement) {
-                    buildingTerrain.setExit(direction, true);
-                } else {
-                    buildingTerrain.setExit(direction, false);
-                }
+                buildingTerrain.setExit(direction, sameType && sameClass && !isGunEmplacement);
             } else {
                 // No building adjacent in this direction
                 buildingTerrain.setExit(direction, false);
@@ -1412,6 +1345,7 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
         updateRelativeLayout();
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     private void applyCollapsedHexLocationDamage(Coords coords) {
         for (int floor = 0; floor < getInternalBuilding().getBuildingHeight(); floor++) {
             applyCollapseFloorLocationDamage(coords, floor);
@@ -1420,8 +1354,6 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
 
     /**
      *
-     * @param coords
-     * @param floor
      */
     private void applyCollapseFloorLocationDamage(Coords coords, int floor) {
         for (int location : locationToRelativeCoordsMap.keySet()) {
@@ -1432,5 +1364,93 @@ public abstract class AbstractBuildingEntity extends Entity implements IBuilding
                 }
             }
         }
+    }
+
+    /**
+     * Calculate building crew based on Advanced Building Minimum Crew Table (TO:AUE). Crew = Non-Gunners + Gunners +
+     * Officers
+     *
+     * @return total crew count
+     */
+    @Override
+    public int getNCrew() {
+        int nonGunners = calculateNonGunnerCrew();
+        int gunners = calculateGunnerCrew();
+        int officers = calculateOfficerCrew(nonGunners + gunners);
+
+        return nonGunners + gunners + officers;
+    }
+
+    /**
+     * Calculate non-gunner crew based on building equipment. Does NOT include bay personnel - those are counted
+     * separately via getBayPersonnel().
+     *
+     * @return non-gunner crew count
+     */
+    private int calculateNonGunnerCrew() {
+        int crew = 0;
+
+        // TODO: Implement equipment-based crew calculation when equipment system is available
+        // (Field Kitchens, Helipads, Landing Decks, etc.)
+        // For now, return 0 - bay personnel are counted separately
+
+        return crew;
+    }
+
+    /**
+     * Calculate gunner crew based on mounted weapons. - Light Weapon: 1 gunner - Medium Weapon: 1 gunner - Heavy
+     * Weapon: Weapon Tons ÷ 5 (round up) - Capital Weapon: 7 gunners
+     *
+     * @return gunner crew count
+     */
+    private int calculateGunnerCrew() {
+        int gunners = 0;
+
+        for (megamek.common.equipment.Mounted<?> mounted : getWeaponList()) {
+            if (mounted.getType() instanceof megamek.common.equipment.WeaponType weapon) {
+                // Determine weapon size and calculate gunners
+                double weaponTonnage = weapon.getTonnage(this);
+
+                if (weapon.isCapital()) {
+                    gunners += 7;  // Capital weapon
+                } else if (weaponTonnage >= 10) {
+                    gunners += (int) Math.ceil(weaponTonnage / 5.0);  // Heavy weapon
+                } else {
+                    gunners += 1;  // Light or Medium weapon
+                }
+            }
+        }
+
+        return gunners;
+    }
+
+    /**
+     * Calculate officer crew based on total non-officer crew. - 1-9 crew: 1 officer - 10+ crew: Total Crew ÷ 10 (round
+     * up)
+     *
+     * @param nonOfficerCrew total non-officer crew
+     *
+     * @return officer crew count
+     */
+    private int calculateOfficerCrew(int nonOfficerCrew) {
+        if (nonOfficerCrew == 0) {
+            return 0;
+        } else if (nonOfficerCrew <= 9) {
+            return 1;
+        } else {
+            return (int) Math.ceil(nonOfficerCrew / 10.0);
+        }
+    }
+
+    @Override
+    public boolean isBoardable() {
+        return true;
+    }
+
+    @Override
+    public boolean canReinforceInfantryVsInfantry() {
+        // AbstractBuildingEntity can reinforce if it's the target of ongoing combat
+        return getGame().getEntitiesVector(getBoardLocation()).stream()
+              .anyMatch(e -> e.getInfantryCombatTargetId() == this.getId());
     }
 }
