@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2017-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2017-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -94,6 +94,8 @@ public interface IAero {
     boolean isRolled();
 
     void setRolled(boolean roll);
+
+    int height();
 
     boolean isOutControlTotal();
 
@@ -621,13 +623,16 @@ public interface IAero {
             roll.addModifier(isVertical ? 1 : 2, "Clear terrain in landing path");
         }
         for (List<Integer> terrain : terrains) {
-            int mod = Terrains.landingModifier(terrain.get(0), terrain.get(1));
+            int mod = Terrains.landingModifier(terrain.getFirst(), terrain.get(1));
             if (isVertical) {
                 mod = mod / 2 + mod % 2;
             }
-            roll.addModifier(mod, Terrains.getDisplayName(terrain.get(0), terrain.get(1)) + " in landing path");
+            roll.addModifier(mod, Terrains.getDisplayName(terrain.getFirst(), terrain.get(1)) + " in landing path");
         }
-
+        if ((((Entity) this).hasAbility(OptionsConstants.PILOT_WIND_WALKER))
+              && PilotSPAHelper.isWindWalkerValid((Entity) this)) {
+            roll.addModifier(-1, "Wind Walker SPA");
+        }
         return roll;
     }
 
@@ -983,7 +988,8 @@ public interface IAero {
               hex.containsTerrain(Terrains.MAGMA) ||
               hex.containsTerrain(Terrains.JUNGLE) ||
               (hex.terrainLevel(Terrains.SNOW) > 1) ||
-              (hex.terrainLevel(Terrains.GEYSER) == 2);
+              (hex.terrainLevel(Terrains.GEYSER) == 2) ||
+              (hex.containsTerrain(Terrains.BUILDING) && hex.terrainLevel(Terrains.BLDG_ELEV) <= height());
     }
 
 }
