@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2004-2005 - Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2007-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2007-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -35,7 +35,6 @@
 package megamek.common.weapons.handlers;
 
 import static java.lang.Math.floor;
-import static megamek.common.equipment.AmmoType.INCENDIARY_MOD;
 
 import java.io.IOException;
 import java.io.ObjectInputStream;
@@ -634,7 +633,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
                         // remove the last reports because they showed the
                         // number of shots that hit
                         while (vPhaseReport.size() > reportSize) {
-                            vPhaseReport.remove(vPhaseReport.size() - 1);
+                            vPhaseReport.removeLast();
                         }
                         hits = 0;
                         for (int i = 0; i < numWeaponsHit; i++) {
@@ -668,7 +667,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
                             // remove the last reports because they showed the
                             // number of shots that hit
                             while (vPhaseReport.size() > reportSize) {
-                                vPhaseReport.remove(vPhaseReport.size() - 1);
+                                vPhaseReport.removeLast();
                             }
                             AMSHits = 0;
                             Report r = new Report(3236);
@@ -702,7 +701,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
                             // remove the last reports because they showed the
                             // number of shots that hit
                             while (vPhaseReport.size() > reportSize) {
-                                vPhaseReport.remove(vPhaseReport.size() - 1);
+                                vPhaseReport.removeLast();
                             }
                             // If you're shooting at a target using single AMS
                             // Too many variables here as far as AMS numbers
@@ -904,12 +903,20 @@ public class WeaponHandler implements AttackHandler, Serializable {
 
             // Point Defense fire vs Capital Missiles
 
+            // Glancing and direct blows are damage-attack concepts. They don't apply to fire extinguishing,
+            // which is a simple pass/fail roll to put out a fire, so skip (and don't report) them.
+            boolean isFireExtinguishing = weaponType.hasFlag(WeaponType.F_EXTINGUISHER)
+                  || (target.getTargetType() == Targetable.TYPE_HEX_EXTINGUISH);
+
             // are we a glancing hit? Check for this here, report it later
-            setGlancingBlowFlags(entityTarget);
+            if (!isFireExtinguishing) {
+                setGlancingBlowFlags(entityTarget);
+            }
 
             // Set Margin of Success/Failure and check for Direct Blows
             toHit.setMoS(roll.getIntValue() - Math.max(2, toHit.getValue()));
-            bDirect = game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_DIRECT_BLOW)
+            bDirect = !isFireExtinguishing
+                  && game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_DIRECT_BLOW)
                   && ((toHit.getMoS() / 3) >= 1) && (entityTarget != null);
 
             // This has to be up here so that we don't screw up glancing/direct blow reports
@@ -1133,7 +1140,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
             if (bMissed && id != vPhaseReport.size()) {
                 vPhaseReport.get(id - 1).newlines--;
                 vPhaseReport.get(id).indent(2);
-                vPhaseReport.get(vPhaseReport.size() - 1).newlines++;
+                vPhaseReport.getLast().newlines++;
             }
 
             if (!bMissed) {
@@ -1607,11 +1614,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
         nDamage = checkTerrain(nDamage, entityTarget, vPhaseReport);
         nDamage = checkLI(nDamage, entityTarget, vPhaseReport);
 
-        // some buildings scale remaining damage that is not absorbed
-        // TODO: this isn't quite right for castles brian
-        if ((null != bldg) && !targetStickingOutOfBuilding) {
-            nDamage = (int) Math.floor(bldg.getDamageToScale() * nDamage);
-        }
+        nDamage = getBuildingDamageAdjustment(entityTarget, bldg, targetStickingOutOfBuilding, nDamage);
 
         // A building may absorb the entire shot.
         if (nDamage == 0) {
@@ -1856,7 +1859,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
         subjectId = getAttackerId();
         nRange = Compute.effectiveDistance(this.game, attackingEntity, target);
         if (target instanceof Mek) {
-            throughFront = Compute.isThroughFrontHex(this.game, attackingEntity.getPosition(), (Entity) target);
+            throughFront = Compute.isThroughFrontHex(attackingEntity.getPosition(), (Entity) target);
         } else {
             throughFront = true;
         }
@@ -1915,11 +1918,11 @@ public class WeaponHandler implements AttackHandler, Serializable {
 
             if (!chain.isEmpty()) {
                 chain.sort((m1, m2) -> Integer.compare(m2.getUsableShotsLeft(), m1.getUsableShotsLeft()));
-                weapon.setLinked(chain.get(0));
+                weapon.setLinked(chain.getFirst());
                 for (int i = 0; i < chain.size() - 1; i++) {
                     chain.get(i).setLinked(chain.get(i + 1));
                 }
-                chain.get(chain.size() - 1).setLinked(null);
+                chain.getLast().setLinked(null);
                 if (weapon.getLinked().getUsableShotsLeft() == 0) {
                     weapon.setFired(true);
                 }
@@ -1946,11 +1949,12 @@ public class WeaponHandler implements AttackHandler, Serializable {
                 int loc = weapon.getLocation();
                 boolean rearMount = weapon.isRearMounted();
                 if (!attackingEntity.hasArcFired(loc, rearMount)) {
-                    attackingEntity.heatBuildup += attackingEntity.getHeatInArc(loc, rearMount);
+                    attackingEntity.changeHeatBuildup(attackingEntity.getHeatInArc(loc, rearMount),
+                          Messages.getString("HeatBreakdown.weaponsFiredArc", attackingEntity.getLocationName(loc)));
                     attackingEntity.setArcFired(loc, rearMount);
                 }
             } else {
-                attackingEntity.heatBuildup += (weapon.getHeatByBay());
+                weaponEntity.changeHeatBuildup(weapon.getHeatByBay(), weapon.getName());
             }
         }
     }
@@ -2291,25 +2295,26 @@ public class WeaponHandler implements AttackHandler, Serializable {
     }
 
     /**
-     * Used by certain artillery handlers to draw drift markers with "hit" graphics if anything is caught in the blast,
-     * or "drift" marker if nothing is damaged. No-op for direct hits.
+     * Used by certain artillery handlers to draw a drift marker at the hex an artillery round actually landed on when it
+     * missed its target. The round is always marked as a drift: a drift that lands on a unit is still a drift, and the
+     * resulting damage is already shown in the combat report. (It must not be marked as a hit - {@link
+     * SpecialHexDisplay#drawNow} deliberately suppresses "hit" markers whose text says they drifted, which would leave
+     * the landing hex with no marker at all.) No-op for direct hits.
+     *
+     * @param targetPos The hex that was targeted
+     * @param finalPos  The hex the round actually drifted to
+     * @param aaa       The artillery attack
+     * @param hitIds    Ids of units caught in the blast; retained because callers produce it as a side effect of
+     *                  resolving the blast damage, but no longer used to choose the marker type
      */
     protected void handleArtilleryDriftMarker(Coords targetPos, Coords finalPos, ArtilleryAttackAction aaa,
           Vector<Integer> hitIds) {
         if (bMissed) {
             String msg = Messages.getString("ArtilleryMessage.drifted") + " " + targetPos.getBoardNum();
-            final SpecialHexDisplay shd;
-            if (hitIds.isEmpty()) {
-                shd = new SpecialHexDisplay(SpecialHexDisplay.Type.ARTILLERY_DRIFT,
-                      game.getRoundCount(),
-                      game.getPlayer(aaa.getPlayerId()),
-                      msg);
-            } else {
-                shd = new SpecialHexDisplay(SpecialHexDisplay.Type.ARTILLERY_HIT,
-                      game.getRoundCount(),
-                      game.getPlayer(aaa.getPlayerId()),
-                      msg);
-            }
+            SpecialHexDisplay shd = new SpecialHexDisplay(SpecialHexDisplay.Type.ARTILLERY_DRIFT,
+                  game.getRoundCount(),
+                  game.getPlayer(aaa.getPlayerId()),
+                  msg);
             game.getBoard(aaa.getTarget(game)).addSpecialHexDisplay(finalPos, shd);
         }
     }
